ffxiv-diff/7.2/index.md
---
title: FFXIV Diff Tables
---
## 7.2

[← return to patch list](https://makar8000.github.io/ffxiv-diff/)

| Sheet | Inserts | Updates | Deletes | Reorders |
| :---- | ------: | ------: | ------: | -------: |
| [AchievementCategory](AchievementCategory) |       2 |       0 |       0 |        0 |
| [Achievement](Achievement) |     126 |       0 |       0 |        0 |
| [ActionCastTimeline](ActionCastTimeline) |      12 |       1 |       0 |        0 |
| [ActionCastVFX](ActionCastVFX) |      72 |       0 |       0 |        0 |
| [ActionCostType](ActionCostType) |       1 |       0 |       0 |        0 |
| [ActionIndirection](ActionIndirection) |       0 |      37 |       0 |        0 |
| [ActionParam](ActionParam) |       0 |       2 |       0 |        0 |
| [ActionProcStatus](ActionProcStatus) |       1 |       0 |       0 |        0 |
| [ActionTimelineMove](ActionTimelineMove) |      17 |       1 |       0 |        0 |
| [ActionTimeline](ActionTimeline) |    5000 |     421 |       0 |        0 |
| [ActionTransient](ActionTransient) |    1900 |     181 |       0 |        0 |
| [Action](Action) |    1900 |    2800 |       0 |        0 |
| [AddonHudSize](AddonHudSize) |       0 |       1 |       0 |        0 |
| [AddonParam](AddonParam) |      17 |       0 |       0 |        0 |
| [AddonTalkParam](AddonTalkParam) |       0 |       0 |       0 |        0 |
| [AddonTransient](AddonTransient) |     100 |       0 |       0 |        0 |
| [Addon](Addon) |      44 |      30 |       0 |       11 |
| [AkatsukiNoteString](AkatsukiNoteString) |       6 |       1 |       0 |        0 |
| [AkatsukiNote](AkatsukiNote) |       0 |       2 |       0 |        0 |
| [AquariumFish](AquariumFish) |      10 |       0 |       0 |        0 |
| [ArchiveItem](ArchiveItem) |      10 |       0 |       0 |        0 |
| [ArrayEventHandler](ArrayEventHandler) |      31 |       6 |       0 |        0 |
| [BGMSituation](BGMSituation) |       7 |       0 |       0 |        0 |
| [BGMSwitch](BGMSwitch) |       4 |       0 |       0 |        0 |
| [BGM](BGM) |      37 |       0 |       0 |        0 |
| [BNpcBase](BNpcBase) |     500 |    2215 |       0 |        0 |
| [BNpcCustomize](BNpcCustomize) |       0 |       7 |       0 |        0 |
| [BNpcName](BNpcName) |     300 |      41 |       0 |        0 |
| [BNpcParts](BNpcParts) |      10 |       2 |       0 |        0 |
| [Balloon](Balloon) |     561 |       1 |       0 |        0 |
| [BannerBg](BannerBg) |      40 |     290 |       0 |        0 |
| [BannerCondition](BannerCondition) |     100 |      11 |       0 |        0 |
| [BannerDecoration](BannerDecoration) |      20 |     250 |       0 |        0 |
| [BannerDesignPreset](BannerDesignPreset) |      30 |      82 |       0 |        0 |
| [BannerFacial](BannerFacial) |       0 |       0 |       0 |        0 |
| [BannerFrame](BannerFrame) |      20 |     220 |       0 |        0 |
| [BannerTimeline](BannerTimeline) |       0 |     233 |       0 |        0 |
| [BaseParam](BaseParam) |       0 |       1 |       0 |        0 |
| [BeastRankBonus](BeastRankBonus) |       1 |       0 |       0 |        0 |
| [BeastTribe](BeastTribe) |       1 |       1 |       0 |        0 |
| [Behavior](Behavior) |    8069 |       7 |       0 |        0 |
| [BuddyEquip](BuddyEquip) |       0 |       1 |       0 |        0 |
| [CSBonusContentIdentifier](CSBonusContentIdentifier) |      26 |       4 |       0 |        0 |
| [CSBonusContentType](CSBonusContentType) |       3 |       0 |       0 |        0 |
| [CSBonusContent](CSBonusContent) |      49 |       1 |       0 |        0 |
| [CSBonusMission](CSBonusMission) |      86 |       0 |       0 |        0 |
| [CSBonusSeason](CSBonusSeason) |       4 |       1 |       0 |        0 |
| [CSBonusTextData](CSBonusTextData) |       1 |       0 |       0 |        0 |
| [CabinetSubCategory](CabinetSubCategory) |       0 |       2 |       0 |        0 |
| [Cabinet](Cabinet) |      13 |      12 |       0 |        0 |
| [Carry](Carry) |       1 |      12 |       0 |        0 |
| [Channeling](Channeling) |      30 |       7 |       0 |        0 |
| [CharaCardBase](CharaCardBase) |      10 |       1 |       0 |        0 |
| [CharaCardDecoration](CharaCardDecoration) |      40 |       6 |       0 |        0 |
| [CharaCardDesignCategory](CharaCardDesignCategory) |       0 |       5 |       0 |        0 |
| [CharaCardDesignPreset](CharaCardDesignPreset) |       0 |     111 |       0 |        0 |
| [CharaCardHeader](CharaCardHeader) |       4 |      69 |       0 |        0 |
| [CharaMakeCustomize](CharaMakeCustomize) |       0 |      60 |       0 |        0 |
| [CharaMakeType](CharaMakeType) |       0 |       8 |       0 |        0 |
| [ClassJobActionSort](ClassJobActionSort) |       0 |       0 |     801 |        0 |
| [ClassJobActionUICategory](ClassJobActionUICategory) |      24 |       0 |       0 |        0 |
| [ClassJobActionUI](ClassJobActionUI) |     374 |      11 |       0 |        0 |
| [ClassJobCategory](ClassJobCategory) |       1 |       1 |       0 |        0 |
| [ClassJob](ClassJob) |       0 |       1 |       0 |        0 |
| [CollectablesRefine](CollectablesRefine) |       2 |       0 |       0 |        0 |
| [CompanionTransient](CompanionTransient) |       8 |       1 |       0 |        0 |
| [Companion](Companion) |       8 |     535 |       0 |        0 |
| [CompleteJournalCategory](CompleteJournalCategory) |       1 |      90 |       0 |        0 |
| [CompleteJournal](CompleteJournal) |      85 |    7260 |       0 |        0 |
| [Completion](Completion) |      14 |      23 |       3 |        0 |
| [Condition](Condition) |       0 |       2 |       0 |        0 |
| [ConfigKey](ConfigKey) |       5 |       1 |       0 |        0 |
| [ContentAttributeRect](ContentAttributeRect) |       2 |       3 |       0 |        0 |
| [ContentCloseCycle](ContentCloseCycle) |       0 |       4 |       0 |        0 |
| [ContentDirectorBattleTalk](ContentDirectorBattleTalk) |     281 |       1 |       0 |        0 |
| [ContentDirectorManagedSG](ContentDirectorManagedSG) |     528 |       0 |       0 |        0 |
| [ContentEntry](ContentEntry) |       1 |       0 |       0 |        0 |
| [ContentFinderConditionTransient](ContentFinderConditionTransient) |       5 |       9 |       0 |        0 |
| [ContentFinderCondition](ContentFinderCondition) |       5 |     421 |       0 |        0 |
| [ContentGauge](ContentGauge) |       3 |       0 |       0 |        0 |
| [ContentRoulette](ContentRoulette) |       0 |       3 |       0 |        0 |
| [ContentTodo](ContentTodo) |      10 |       0 |       0 |        0 |
| [ContentTourismConstruct](ContentTourismConstruct) |       0 |      24 |       1 |        0 |
| [ContentType](ContentType) |       0 |       1 |       0 |        0 |
| [ContentsNoteCategory](ContentsNoteCategory) |       1 |       2 |       0 |        0 |
| [ContentsNote](ContentsNote) |       0 |      10 |       0 |        0 |
| [ContentsTutorialPage](ContentsTutorialPage) |      11 |       0 |       0 |        0 |
| [ContentsTutorial](ContentsTutorial) |       2 |       0 |       0 |        0 |
| [CraftAction](CraftAction) |       0 |      58 |       0 |        0 |
| [CraftLevelDifference](CraftLevelDifference) |       0 |       0 |      80 |        0 |
| [CreditCast](CreditCast) |       0 |     157 |       0 |        0 |
| [CreditDataSet](CreditDataSet) |       0 |       0 |       0 |        0 |
| [CreditListText](CreditListText) |       0 |       2 |       0 |        0 |
| [CreditList](CreditList) |   14261 |    2060 |      70 |        0 |
| [Credit](Credit) |       0 |     153 |       0 |        0 |
| [CustomTalkNestHandlers](CustomTalkNestHandlers) |      16 |       0 |       0 |        0 |
| [CustomTalkResident](CustomTalkResident) |      19 |       0 |       0 |        0 |
| [CustomTalk](CustomTalk) |      19 |       5 |       0 |        0 |
| [CutActionTimeline](CutActionTimeline) |       3 |       0 |       0 |        0 |
| [CutScreenImage](CutScreenImage) |      20 |       2 |       0 |        0 |
| [CutsceneName](CutsceneName) |     200 |       0 |       0 |        0 |
| [CutsceneWorkIndex](CutsceneWorkIndex) |     200 |       0 |       0 |        0 |
| [Cutscene](Cutscene) |     200 |      27 |       0 |        0 |
| [DawnContentParticipable](DawnContentParticipable) |      13 |       1 |       0 |        0 |
| [DawnContent](DawnContent) |       1 |       2 |       0 |        0 |
| [DeepDungeonRoom](DeepDungeonRoom) |     264 |       0 |       0 |        0 |
| [DefaultTalk](DefaultTalk) |     180 |      10 |       0 |        0 |
| [DescriptionPage](DescriptionPage) |      67 |      10 |       5 |        0 |
| [DescriptionSection](DescriptionSection) |      22 |       0 |       5 |        0 |
| [DescriptionStandAloneTransient](DescriptionStandAloneTransient) |       2 |       0 |       0 |        0 |
| [DescriptionStandAlone](DescriptionStandAlone) |       2 |       0 |       0 |        0 |
| [DescriptionString](DescriptionString) |     219 |       5 |      26 |        0 |
| [Description](Description) |       1 |       0 |       0 |        0 |
| [DisposalShopItem](DisposalShopItem) |      22 |       0 |       0 |        0 |
| [DisposalShop](DisposalShop) |       1 |       0 |       0 |        0 |
| [DpsChallengeOfficer](DpsChallengeOfficer) |       0 |       1 |       0 |        0 |
| [DpsChallengeTransient](DpsChallengeTransient) |       6 |       0 |       0 |        0 |
| [DpsChallenge](DpsChallenge) |       6 |       0 |       0 |        0 |
| [DynamicEventManager](DynamicEventManager) |       0 |       0 |       0 |        0 |
| [DynamicEventType](DynamicEventType) |       0 |       0 |       0 |        0 |
| [DynamicEventUIType](DynamicEventUIType) |       3 |       0 |       0 |        0 |
| [DynamicEvent](DynamicEvent) |       0 |       0 |       0 |        0 |
| [ENpcBase](ENpcBase) |    1845 |     122 |       0 |        0 |
| [ENpcResident](ENpcResident) |    1845 |      68 |       0 |        0 |
| [EObjName](EObjName) |     340 |       4 |       0 |        0 |
| [EObj](EObj) |     340 |       5 |       0 |        0 |
| [EmjAddon](EmjAddon) |       0 |       1 |       0 |        0 |
| [EmjVoiceNpc](EmjVoiceNpc) |       0 |       0 |       0 |        0 |
| [EmoteMode](EmoteMode) |       4 |       0 |       0 |        0 |
| [EmoteTransient](EmoteTransient) |       0 |       4 |       0 |        0 |
| [Emote](Emote) |       0 |       8 |       0 |        0 |
| [EventAction](EventAction) |      13 |       0 |       0 |        0 |
| [EventExtraConditionSet](EventExtraConditionSet) |      10 |       0 |       0 |        0 |
| [EventGimmickPathMove](EventGimmickPathMove) |      10 |       0 |       0 |        0 |
| [EventItemHelp](EventItemHelp) |      30 |       1 |       0 |        0 |
| [EventItem](EventItem) |      30 |       1 |       0 |        0 |
| [EventMountGimmickPathMove](EventMountGimmickPathMove) |      57 |       0 |       0 |        0 |
| [EventSystemDefine](EventSystemDefine) |       3 |       0 |       0 |        0 |
| [ExportedGatheringPoint](ExportedGatheringPoint) |      46 |       7 |       0 |        0 |
| [ExportedSG](ExportedSG) |     309 |       3 |       0 |        0 |
| [ExtraCommand](ExtraCommand) |       1 |       0 |       0 |        0 |
| [FashionCheckThemeCategory](FashionCheckThemeCategory) |       8 |       1 |       0 |        0 |
| [FashionCheckWeeklyTheme](FashionCheckWeeklyTheme) |      61 |       0 |       0 |        0 |
| [FateEvent](FateEvent) |       0 |       1 |       0 |        0 |
| [FateMode](FateMode) |       2 |       0 |       0 |        0 |
| [FateTokenType](FateTokenType) |       1 |       1 |       0 |        0 |
| [Fate](Fate) |      50 |       1 |       0 |        0 |
| [Festival](Festival) |       2 |       0 |       0 |        0 |
| [FishParameterReverse](FishParameterReverse) |     286 |       0 |       0 |        0 |
| [FishParameter](FishParameter) |     286 |       6 |       0 |        0 |
| [FishingBaitParameter](FishingBaitParameter) |      24 |       0 |       0 |        0 |
| [FishingNoteInfo](FishingNoteInfo) |     286 |      15 |       0 |        0 |
| [FishingSpot](FishingSpot) |      54 |       8 |       0 |        0 |
| [FittingShopCategoryItem](FittingShopCategoryItem) |     214 |      81 |       0 |        0 |
| [FittingShopCategory](FittingShopCategory) |      17 |       0 |       0 |        0 |
| [FittingShopItemSet](FittingShopItemSet) |       6 |       0 |       0 |        0 |
| [FittingShop](FittingShop) |       1 |       1 |       0 |        0 |
| [FollowMount](FollowMount) |      11 |       0 |       0 |        0 |
| [Frontline01](Frontline01) |       0 |       1 |       2 |        0 |
| [Frontline](Frontline) |       0 |       3 |       0 |        0 |
| [FurnitureCatalogItemList](FurnitureCatalogItemList) |      41 |       0 |       0 |        0 |
| [GameRewardObtainType](GameRewardObtainType) |       0 |       2 |       0 |        0 |
| [GardeningSeed](GardeningSeed) |       1 |       0 |       0 |        0 |
| [GathererCrafterLvAdjustTable](GathererCrafterLvAdjustTable) |       0 |       0 |       0 |        0 |
| [GathererCrafterTool](GathererCrafterTool) |      11 |       0 |       0 |        0 |
| [GathererReductionReward](GathererReductionReward) |     140 |       0 |       0 |        0 |
| [GatheringItemLevelConvertTable](GatheringItemLevelConvertTable) |      30 |       0 |       0 |        0 |
| [GatheringItemPoint](GatheringItemPoint) |       6 |       0 |       0 |        0 |
| [GatheringItem](GatheringItem) |     137 |       6 |       0 |        0 |
| [GatheringNotebookItem](GatheringNotebookItem) |       6 |     345 |       0 |        0 |
| [GatheringNotebookList](GatheringNotebookList) |       4 |       2 |       0 |        0 |
| [GatheringPointBase](GatheringPointBase) |     105 |       0 |       0 |        0 |
| [GatheringPointBonus](GatheringPointBonus) |       0 |      28 |       0 |        0 |
| [GatheringPointTransient](GatheringPointTransient) |     228 |       0 |       0 |        0 |
| [GatheringPoint](GatheringPoint) |     228 |       0 |       0 |        0 |
| [GatheringSubCategory](GatheringSubCategory) |       0 |      59 |       0 |        0 |
| [GcArmyExpeditionMemberBonus](GcArmyExpeditionMemberBonus) |       0 |       7 |       0 |        0 |
| [GcArmyMemberGrow](GcArmyMemberGrow) |       0 |       1 |       0 |        0 |
| [GeneralAction](GeneralAction) |       7 |      17 |       0 |        0 |
| [GilShopInfo](GilShopInfo) |    3100 |      10 |       0 |        0 |
| [GilShopItem](GilShopItem) |    1239 |     105 |    1492 |        0 |
| [GilShop](GilShop) |      49 |      96 |       0 |        0 |
| [GimmickAccessor](GimmickAccessor) |      30 |     347 |       0 |        0 |
| [GimmickBill](GimmickBill) |       4 |       0 |       0 |        0 |
| [GimmickJump](GimmickJump) |       4 |       0 |       0 |        0 |
| [GimmickRect](GimmickRect) |      83 |       2 |       0 |        0 |
| [GimmickTalk](GimmickTalk) |       8 |       0 |       0 |        0 |
| [GlassesStyle](GlassesStyle) |      10 |       0 |       0 |        0 |
| [Glasses](Glasses) |     120 |       0 |       0 |        0 |
| [GroupPoseFrame](GroupPoseFrame) |       0 |       1 |       0 |        0 |
| [GroupPoseStamp](GroupPoseStamp) |      30 |      71 |       0 |        0 |
| [GuidePageString](GuidePageString) |       0 |       1 |       0 |        0 |
| [GuidePage](GuidePage) |       0 |      51 |       2 |        0 |
| [Guide](Guide) |      31 |       1 |       0 |        0 |
| [HairMakeType](HairMakeType) |       0 |      32 |       0 |        0 |
| [HousingFurniture](HousingFurniture) |      31 |       0 |       0 |        0 |
| [HousingInterior](HousingInterior) |       3 |       0 |       0 |        0 |
| [HousingYardObject](HousingYardObject) |       6 |       0 |       0 |        0 |
| [HowToPage](HowToPage) |       0 |      30 |       0 |        0 |
| [HowTo](HowTo) |       8 |      10 |       0 |        0 |
| [HudTransient](HudTransient) |       1 |       1 |       0 |        0 |
| [Hud](Hud) |       1 |       1 |       0 |        0 |
| [InclusionShopSeries](InclusionShopSeries) |       8 |       0 |       0 |        0 |
| [InstanceContentGuide](InstanceContentGuide) |      10 |       0 |       0 |        0 |
| [InstanceContentRewardItem](InstanceContentRewardItem) |      10 |       2 |       0 |        0 |
| [InstanceContentTextData](InstanceContentTextData) |     602 |     101 |       0 |        0 |
| [InstanceContent](InstanceContent) |       4 |      52 |       0 |        0 |
| [ItemAction](ItemAction) |       0 |      43 |       0 |        0 |
| [ItemBarterCheck](ItemBarterCheck) |       1 |       0 |       0 |        0 |
| [ItemBarterWarning](ItemBarterWarning) |      22 |       0 |       0 |        0 |
| [ItemFood](ItemFood) |      17 |       0 |       0 |        0 |
| [ItemLevel](ItemLevel) |       0 |      10 |       0 |        0 |
| [ItemSearchCategory](ItemSearchCategory) |       0 |      68 |       0 |        0 |
| [ItemSortCategory](ItemSortCategory) |       2 |       0 |       0 |        0 |
| [Item](Item) |    3100 |   39191 |       0 |        0 |
| [Jingle](Jingle) |       8 |       0 |       0 |        0 |
| [JobHudManualPriority](JobHudManualPriority) |       0 |       1 |       0 |        0 |
| [JobHudManual](JobHudManual) |       0 |       1 |       0 |        0 |
| [JournalCategory](JournalCategory) |       1 |      98 |       0 |        0 |
| [JournalGenre](JournalGenre) |       6 |     265 |       0 |        0 |
| [Knockback](Knockback) |       1 |       1 |       0 |        0 |
| [LFGExtensionContent](LFGExtensionContent) |       1 |       0 |       0 |        0 |
| [LegacyQuest](LegacyQuest) |       0 |     295 |       0 |        0 |
| [Level](Level) |     304 |     118 |       2 |        0 |
| [LivelyActorGroup](LivelyActorGroup) |     330 |       0 |       0 |        0 |
| [Lobby](Lobby) |       0 |       2 |       0 |        0 |
| [Lockon](Lockon) |      30 |       2 |       0 |        0 |
| [LogMessage](LogMessage) |       0 |     103 |       0 |        0 |
| [MKDBNpcData](MKDBNpcData) |     174 |       0 |       0 |        0 |
| [MKDChain](MKDChain) |       9 |       0 |       0 |        0 |
| [MKDData](MKDData) |       0 |       0 |       0 |        0 |
| [MKDGrowDataSJob](MKDGrowDataSJob) |      74 |       0 |       0 |        0 |
| [MKDGrowData](MKDGrowData) |      51 |       0 |       0 |        0 |
| [MKDLore](MKDLore) |      31 |       0 |       0 |        0 |
| [MKDSupportJob](MKDSupportJob) |      13 |       0 |       0 |        0 |
| [MKDTrait](MKDTrait) |      16 |       0 |       0 |        0 |
| [MapCondition](MapCondition) |       2 |       0 |       0 |        0 |
| [MapMarker](MapMarker) |     232 |      10 |       0 |        0 |
| [MapReplace](MapReplace) |      64 |      25 |       0 |        0 |
| [MapSymbol](MapSymbol) |       4 |       0 |       0 |        0 |
| [MapTransientPvPMap](MapTransientPvPMap) |      32 |      10 |       0 |        0 |
| [Map](Map) |      32 |      11 |       0 |        0 |
| [MassivePcContentBattleTalk](MassivePcContentBattleTalk) |      90 |       0 |       0 |        0 |
| [MassivePcContentTextData](MassivePcContentTextData) |     141 |       0 |       0 |        0 |
| [MassivePcContentTodo](MassivePcContentTodo) |      79 |       0 |       0 |        0 |
| [MassivePcContent](MassivePcContent) |       0 |       0 |       0 |        0 |
| [McGuffinUIData](McGuffinUIData) |       1 |       0 |       0 |        0 |
| [McGuffin](McGuffin) |       1 |       0 |       0 |        0 |
| [MirageStoreSetItemLookup](MirageStoreSetItemLookup) |      28 |       0 |       0 |        0 |
| [MirageStoreSetItem](MirageStoreSetItem) |      11 |       2 |       0 |        0 |
| [MobHuntTarget](MobHuntTarget) |       0 |       1 |       0 |        0 |
| [ModelChara](ModelChara) |     150 |      24 |       0 |        0 |
| [ModelSkeleton](ModelSkeleton) |      18 |       1 |       0 |        0 |
| [MotionTimelineAdvanceBlend](MotionTimelineAdvanceBlend) |       0 |      17 |       0 |        0 |
| [MotionTimelineBlendTable](MotionTimelineBlendTable) |       0 |       3 |       0 |        0 |
| [MotionTimeline](MotionTimeline) |       0 |     135 |       0 |        0 |
| [MountAction](MountAction) |       2 |       0 |       0 |        0 |
| [MountCustomize](MountCustomize) |       6 |      18 |       0 |        0 |
| [MountSpeed](MountSpeed) |       1 |       0 |       0 |        0 |
| [MountTransient](MountTransient) |      21 |       2 |       0 |        0 |
| [Mount](Mount) |      21 |     361 |       0 |        0 |
| [MoveControl](MoveControl) |       1 |       0 |       0 |        0 |
| [NotebookDivision](NotebookDivision) |       1 |       1 |       0 |        0 |
| [NpcEquip](NpcEquip) |      49 |       8 |       0 |        0 |
| [NpcYell](NpcYell) |     200 |      26 |       0 |        0 |
| [Omen](Omen) |      25 |       3 |       0 |        0 |
| [OnlineStatus](OnlineStatus) |       0 |      21 |       0 |        0 |
| [OpenContentCandidateName](OpenContentCandidateName) |       2 |       0 |       0 |        0 |
| [OpenContent](OpenContent) |       0 |       2 |       0 |        0 |
| [OpenLuaUI](OpenLuaUI) |       6 |       0 |       0 |        0 |
| [OrchestrionPath](OrchestrionPath) |      24 |       0 |       0 |        0 |
| [OrchestrionUiparam](OrchestrionUiparam) |      24 |       0 |       0 |        0 |
| [Orchestrion](Orchestrion) |      24 |      11 |       0 |        0 |
| [OrnamentCustomizeGroup](OrnamentCustomizeGroup) |       0 |       1 |       0 |        0 |
| [OrnamentCustomize](OrnamentCustomize) |       0 |       5 |       0 |        0 |
| [Permission](Permission) |       3 |      68 |       0 |        0 |
| [PlaceName](PlaceName) |     300 |      58 |       0 |        0 |
| [PlantPotFlowerSeed](PlantPotFlowerSeed) |       1 |       0 |       0 |        0 |
| [PointMenuChoice](PointMenuChoice) |      11 |       0 |       0 |        0 |
| [PointMenuString](PointMenuString) |      10 |       0 |       0 |        0 |
| [PointMenu](PointMenu) |       2 |       0 |       0 |        0 |
| [PreHandler](PreHandler) |       2 |       0 |       0 |        0 |
| [PublicContentTextData](PublicContentTextData) |       4 |       0 |       0 |        0 |
| [PvPActionSort](PvPActionSort) |       0 |      25 |       0 |        0 |
| [PvPSelectAction](PvPSelectAction) |      15 |       0 |       0 |        0 |
| [PvPSeries](PvPSeries) |       1 |       0 |       0 |        0 |
| [QuestAcceptAdditionCondition](QuestAcceptAdditionCondition) |       4 |       0 |       0 |        0 |
| [QuestChapter](QuestChapter) |      38 |       0 |       0 |        0 |
| [QuestClassJobReward](QuestClassJobReward) |      21 |     425 |       0 |        0 |
| [QuestClassJobSupply](QuestClassJobSupply) |      75 |       0 |       0 |        0 |
| [QuestDerivedClass](QuestDerivedClass) |       9 |       8 |       0 |        0 |
| [QuestEffectDefine](QuestEffectDefine) |      80 |       2 |       5 |        0 |
| [QuestEffectType](QuestEffectType) |       1 |       0 |       0 |        0 |
| [QuestEffect](QuestEffect) |      21 |       0 |       0 |        0 |
| [QuestEquipModel](QuestEquipModel) |       5 |       0 |       0 |        0 |
| [QuestLinkMarkerSet](QuestLinkMarkerSet) |      73 |       1 |       0 |        0 |
| [QuestLinkMarker](QuestLinkMarker) |      57 |       0 |       0 |        0 |
| [QuestRedoChapter](QuestRedoChapter) |       0 |       0 |       0 |        0 |
| [QuestRedoValidCustomTalk](QuestRedoValidCustomTalk) |      12 |       0 |       0 |        0 |
| [QuestRedo](QuestRedo) |       0 |       2 |       0 |        0 |
| [QuestSceneAbortCondition](QuestSceneAbortCondition) |       9 |       0 |       0 |        0 |
| [QuestSetDefine](QuestSetDefine) |      69 |       0 |       0 |        0 |
| [QuestSubCommand](QuestSubCommand) |       3 |       0 |       1 |        0 |
| [QuestSystemDefine](QuestSystemDefine) |       1 |       0 |       0 |        0 |
| [Quest](Quest) |      73 |    5251 |       0 |        0 |
| [RPParameter](RPParameter) |       0 |       2 |       0 |        0 |
| [RacingChocoboNameInfo](RacingChocoboNameInfo) |       0 |       0 |       0 |        0 |
| [ReactionEventObject](ReactionEventObject) |      15 |       0 |       0 |        0 |
| [RecipeLevelTable](RecipeLevelTable) |       0 |      28 |       0 |        0 |
| [RecipeLookup](RecipeLookup) |     156 |       0 |       0 |        0 |
| [RecipeNotebookList](RecipeNotebookList) |       8 |      15 |       0 |        0 |
| [Recipe](Recipe) |     800 |     127 |       0 |        0 |
| [RecommendContents](RecommendContents) |       2 |     121 |       0 |        0 |
| [Resident](Resident) |    1373 |      41 |      19 |        0 |
| [RetainerTaskNormal](RetainerTaskNormal) |       6 |       0 |       0 |        0 |
| [RetainerTaskParameter](RetainerTaskParameter) |      10 |       0 |       0 |        0 |
| [RetainerTask](RetainerTask) |       6 |       0 |       0 |        0 |
| [SE](SE) |       7 |       0 |       0 |        0 |
| [ScenarioTree](ScenarioTree) |       8 |       0 |       0 |        0 |
| [ScreenImage](ScreenImage) |     100 |       7 |       0 |        0 |
| [SecretRecipeBook](SecretRecipeBook) |       8 |       0 |       0 |        0 |
| [SequentialEventMultipleRange](SequentialEventMultipleRange) |      20 |       0 |       0 |        0 |
| [SequentialEvent](SequentialEvent) |      62 |       0 |       0 |        0 |
| [ShellFixedFromCommand](ShellFixedFromCommand) |      87 |      21 |       0 |        0 |
| [SnipeCollision](SnipeCollision) |       4 |       0 |       0 |        0 |
| [SnipeHitEvent](SnipeHitEvent) |       4 |       2 |       0 |        0 |
| [SnipePerformanceCamera](SnipePerformanceCamera) |       3 |       0 |       0 |        0 |
| [SnipeTalk](SnipeTalk) |       3 |       0 |       0 |        0 |
| [Snipe](Snipe) |       1 |       0 |       0 |        0 |
| [SpecialShop](SpecialShop) |      43 |      24 |       0 |        0 |
| [StainTransient](StainTransient) |       8 |       0 |       0 |        0 |
| [Stain](Stain) |       8 |       0 |       0 |        0 |
| [StatusHitEffect](StatusHitEffect) |       1 |       0 |       0 |        0 |
| [StatusLoopVFX](StatusLoopVFX) |      54 |       4 |       0 |        0 |
| [Status](Status) |     100 |     104 |       0 |        0 |
| [Story](Story) |       9 |       7 |       0 |        0 |
| [SubmarineExploration](SubmarineExploration) |       0 |       6 |       0 |        0 |
| [SubmarineRank](SubmarineRank) |       0 |       5 |       0 |        0 |
| [SwitchTalkVariation](SwitchTalkVariation) |     109 |       8 |       0 |        6 |
| [SwitchTalk](SwitchTalk) |      20 |       2 |       0 |        0 |
| [TerritoryAethernet](TerritoryAethernet) |       2 |       0 |       0 |        0 |
| [TerritoryAetheryteList](TerritoryAetheryteList) |       6 |       0 |       0 |        0 |
| [TerritoryIntendedUse](TerritoryIntendedUse) |       0 |       3 |       0 |        0 |
| [TerritoryTypeTelepo](TerritoryTypeTelepo) |      32 |       1 |       0 |        0 |
| [TerritoryTypeTransient](TerritoryTypeTransient) |      32 |      20 |       0 |        0 |
| [TerritoryType](TerritoryType) |      32 |    1048 |       0 |        0 |
| [TextCommandParam](TextCommandParam) |       2 |       0 |       0 |        0 |
| [TextCommand](TextCommand) |       4 |       2 |       0 |        0 |
| [Title](Title) |      27 |       0 |       0 |        0 |
| [TofuEditParam](TofuEditParam) |      10 |       0 |       0 |        0 |
| [TofuObject](TofuObject) |       0 |       0 |       0 |        0 |
| [TofuPresetCategory](TofuPresetCategory) |       3 |       0 |       3 |        0 |
| [TofuPresetObject](TofuPresetObject) |       0 |       0 |       0 |        0 |
| [TomestoneConvert](TomestoneConvert) |       1 |       2 |       0 |        0 |
| [TomestonesItem](TomestonesItem) |       1 |       4 |       0 |        0 |
| [TopicSelect](TopicSelect) |       6 |       4 |       0 |        0 |
| [TraitTransient](TraitTransient) |      70 |      26 |       0 |        0 |
| [Trait](Trait) |      70 |     180 |       0 |        0 |
| [Transformation](Transformation) |       6 |       0 |       0 |        0 |
| [Treasure](Treasure) |     140 |       3 |       0 |        0 |
| [TripleTriadCardObtain](TripleTriadCardObtain) |       2 |       0 |       0 |        0 |
| [TripleTriadCardResident](TripleTriadCardResident) |       9 |      44 |       0 |        0 |
| [TripleTriadCardType](TripleTriadCardType) |       0 |       1 |       0 |        0 |
| [TripleTriadCard](TripleTriadCard) |       9 |       1 |       0 |        0 |
| [TripleTriadResident](TripleTriadResident) |       2 |       0 |       0 |        0 |
| [TripleTriad](TripleTriad) |       2 |       0 |       0 |        0 |
| [UDS_Event](UDS_Event) |      18 |       0 |       0 |        0 |
| [UDS_Object](UDS_Object) |       1 |       0 |       0 |        0 |
| [UDS_Property](UDS_Property) |      18 |       0 |       0 |        0 |
| [UDS_Stats](UDS_Stats) |      18 |       0 |       0 |        0 |
| [UIConst](UIConst) |       8 |       0 |       0 |        0 |
| [VFX](VFX) |     153 |       0 |       0 |        0 |
| [VaseFlower](VaseFlower) |      18 |       5 |       0 |        0 |
| [Vase](Vase) |       0 |       5 |       0 |        0 |
| [WKSAchievementDailyDefine](WKSAchievementDailyDefine) |       4 |       0 |       0 |        0 |
| [WKSAchievementRewardItem](WKSAchievementRewardItem) |      47 |       0 |       0 |        0 |
| [WKSAchievement](WKSAchievement) |      47 |       0 |       0 |        0 |
| [WKSCosmoToolClass](WKSCosmoToolClass) |       0 |       0 |       0 |        0 |
| [WKSCosmoToolCommonLevel](WKSCosmoToolCommonLevel) |      10 |       0 |       0 |        0 |
| [WKSCosmoToolDataAmount](WKSCosmoToolDataAmount) |       1 |       0 |       0 |        0 |
| [WKSCosmoToolName](WKSCosmoToolName) |     192 |       0 |       0 |        0 |
| [WKSCosmoToolPassiveBuff](WKSCosmoToolPassiveBuff) |       0 |       0 |       0 |        0 |
| [WKSDevGradeBGSet](WKSDevGradeBGSet) |     261 |       0 |       0 |        0 |
| [WKSDevGrade](WKSDevGrade) |      65 |       0 |       0 |        0 |
| [WKSEmergencyInfoText](WKSEmergencyInfoText) |      12 |       0 |       0 |        0 |
| [WKSEmergencyInfo](WKSEmergencyInfo) |       3 |       0 |       0 |        0 |
| [WKSEmergencyLivelyActorGroup](WKSEmergencyLivelyActorGroup) |       0 |       0 |       2 |        0 |
| [WKSEmergencyMissionGroup](WKSEmergencyMissionGroup) |      34 |       0 |       0 |        0 |
| [WKSEmergencyMission](WKSEmergencyMission) |      38 |       0 |       0 |        0 |
| [WKSEmergencyProblem](WKSEmergencyProblem) |      13 |       0 |       0 |        0 |
| [WKSFateControl](WKSFateControl) |      20 |       0 |       0 |        0 |
| [WKSFortunePatternUIColorSet](WKSFortunePatternUIColorSet) |       8 |       0 |       0 |        0 |
| [WKSFortunePatternUIPlace](WKSFortunePatternUIPlace) |       8 |       0 |       0 |        0 |
| [WKSFortunePrizeGrade](WKSFortunePrizeGrade) |       6 |       0 |       0 |        0 |
| [WKSFortuneSPPatternUIPlace](WKSFortuneSPPatternUIPlace) |       3 |       0 |       0 |        0 |
| [WKSFunction](WKSFunction) |       3 |       0 |       0 |        0 |
| [WKSItemInfo](WKSItemInfo) |     809 |       0 |       0 |        0 |
| [WKSItemSubCategory](WKSItemSubCategory) |       8 |       0 |       0 |        0 |
| [WKSMechaEventContribution](WKSMechaEventContribution) |       0 |       0 |      12 |        0 |
| [WKSMechaEventData](WKSMechaEventData) |       0 |       0 |       0 |        0 |
| [WKSMechaEventObjectGroup](WKSMechaEventObjectGroup) |      89 |      31 |       0 |        0 |
| [WKSMechaEventObject](WKSMechaEventObject) |      78 |       0 |       0 |        0 |
| [WKSMechaEventRewardUI](WKSMechaEventRewardUI) |       3 |       0 |       0 |        0 |
| [WKSMechaLivelyActorGroup](WKSMechaLivelyActorGroup) |       6 |       0 |       0 |        0 |
| [WKSMissionInfo](WKSMissionInfo) |      12 |       0 |       0 |        0 |
| [WKSMissionLotterySpecialCond](WKSMissionLotterySpecialCond) |      15 |       0 |       0 |        0 |
| [WKSMissionMapMarker](WKSMissionMapMarker) |      50 |       0 |       0 |        0 |
| [WKSMissionPromotionCondition](WKSMissionPromotionCondition) |       0 |       0 |       0 |        0 |
| [WKSMissionRecipe](WKSMissionRecipe) |     407 |       0 |       0 |        0 |
| [WKSMissionReward](WKSMissionReward) |     545 |       0 |       0 |        0 |
| [WKSMissionSupplyItem](WKSMissionSupplyItem) |     470 |       0 |       0 |        0 |
| [WKSMissionText](WKSMissionText) |     147 |       0 |       0 |        0 |
| [WKSMissionToDoEvalutionItem](WKSMissionToDoEvalutionItem) |     683 |       0 |       0 |        0 |
| [WKSMissionToDoEvalutionRefin](WKSMissionToDoEvalutionRefin) |     301 |       0 |       0 |        0 |
| [WKSMissionToDo](WKSMissionToDo) |     585 |       0 |       0 |        0 |
| [WKSMissionUnit](WKSMissionUnit) |     533 |       0 |       0 |        0 |
| [WKSParam](WKSParam) |      40 |       0 |       0 |        0 |
| [WKSPioneeringTrailString](WKSPioneeringTrailString) |      17 |       0 |       0 |        0 |
| [WKSPioneeringTrail](WKSPioneeringTrail) |      17 |       0 |       0 |        0 |
| [WKSPraiseHologram](WKSPraiseHologram) |       7 |       0 |       0 |        0 |
| [WKSScoreList](WKSScoreList) |      11 |       0 |       0 |        0 |
| [WKSSharedGroup](WKSSharedGroup) |     510 |       0 |       0 |        0 |
| [WKSTerritoryInfo](WKSTerritoryInfo) |       3 |       0 |       0 |        0 |
| [WKSText](WKSText) |      12 |       0 |       0 |        0 |
| [WKSZoneFloorCollision](WKSZoneFloorCollision) |       4 |       0 |       0 |        0 |
| [Warp](Warp) |      11 |       0 |       0 |        0 |
| [WeaponTimeline](WeaponTimeline) |       0 |      13 |       0 |        0 |
| [WeatherRate](WeatherRate) |       1 |       1 |       0 |        0 |
| [Weather](Weather) |       4 |       0 |       0 |        0 |
| [WeeklyBingoOrderData](WeeklyBingoOrderData) |       0 |       5 |       0 |        0 |
| [WeeklyBingoRewardData](WeeklyBingoRewardData) |       0 |     141 |       0 |        0 |
| [WeeklyBingoText](WeeklyBingoText) |       0 |       4 |       0 |        0 |
| [WorldDCGroupType](WorldDCGroupType) |       1 |       0 |       0 |        0 |
| [World](World) |      14 |       0 |       0 |        0 |
| [YardCatalogItemList](YardCatalogItemList) |       7 |       0 |       0 |        0 |
| [ZoneSharedGroup](ZoneSharedGroup) |       3 |       0 |       0 |        0 |
| [custom/000/RegSeaAcnGuild_00089](custom/000/RegSeaAcnGuild_00089) |       0 |       5 |       0 |        0 |
| [custom/002/CmnGscTripleTriadGuide_00238](custom/002/CmnGscTripleTriadGuide_00238) |       0 |       2 |       0 |        0 |
| [custom/003/RegSeaPvpSeasonRewardSecond_00358](custom/003/RegSeaPvpSeasonRewardSecond_00358) |       0 |       2 |       0 |        0 |
| [custom/007/CtsHnt60RiskyMobMareLamentorum_00764](custom/007/CtsHnt60RiskyMobMareLamentorum_00764) |       0 |       1 |       0 |        0 |
| [custom/007/RegIsb5TheGreatWork_00748](custom/007/RegIsb5TheGreatWork_00748) |       0 |       1 |       0 |        0 |
| [custom/008/CtsOpn70Gabbro_00851](custom/008/CtsOpn70Gabbro_00851) |      10 |       5 |       0 |        0 |
| [custom/008/CtsOpn70WanderingMinstrel_00897](custom/008/CtsOpn70WanderingMinstrel_00897) |      11 |       0 |       0 |        0 |
| [custom/009/CtsMkdEntrance_00929](custom/009/CtsMkdEntrance_00929) |       9 |       0 |       0 |        0 |
| [custom/009/CtsMkdKinGkd010Induction_00936](custom/009/CtsMkdKinGkd010Induction_00936) |       1 |       0 |       0 |        0 |
| [custom/009/CtsMkdRoaNotePlace_00930](custom/009/CtsMkdRoaNotePlace_00930) |       0 |       0 |       0 |        0 |
| [custom/009/CtsMkdTranspoint_00924](custom/009/CtsMkdTranspoint_00924) |       2 |       0 |       0 |        0 |
| [custom/009/CtsMkdWeatherForeCast_00925](custom/009/CtsMkdWeatherForeCast_00925) |       9 |       0 |       0 |        0 |
| [custom/009/CtsMkdWepTrade1_00933](custom/009/CtsMkdWepTrade1_00933) |       6 |       0 |       0 |        0 |
| [custom/009/CtsWks72MoongateHub_00934](custom/009/CtsWks72MoongateHub_00934) |      35 |       0 |       0 |        0 |
| [custom/009/CtsWksBulletinBoard_00928](custom/009/CtsWksBulletinBoard_00928) |       2 |       0 |       0 |        0 |
| [custom/009/CtsWksDelegationMember_00927](custom/009/CtsWksDelegationMember_00927) |      24 |       0 |       0 |        0 |
| [custom/009/CtsWksEmergencyAccessObj_00923](custom/009/CtsWksEmergencyAccessObj_00923) |       4 |       0 |       0 |        0 |
| [custom/009/CtsWksEntrance_00921](custom/009/CtsWksEntrance_00921) |       6 |       0 |       0 |        0 |
| [custom/009/CtsWksExit_00922](custom/009/CtsWksExit_00922) |       5 |       0 |       0 |        0 |
| [custom/009/CtsWksLotBranchOffice_00919](custom/009/CtsWksLotBranchOffice_00919) |       0 |       0 |       0 |        0 |
| [custom/009/CtsWksLot_00918](custom/009/CtsWksLot_00918) |      23 |       0 |       0 |        0 |
| [custom/009/CtsWksMechaCharger_00935](custom/009/CtsWksMechaCharger_00935) |       2 |       0 |       0 |        0 |
| [custom/009/CtsWksMechaEntryTicketCounter_00932](custom/009/CtsWksMechaEntryTicketCounter_00932) |      16 |       0 |       0 |        0 |
| [custom/009/CtsWksSdgAttendant_00920](custom/009/CtsWksSdgAttendant_00920) |      46 |       0 |       0 |        0 |
| [custom/009/FesAnv2025Guide_00926](custom/009/FesAnv2025Guide_00926) |       9 |       0 |       0 |        0 |
| [custom/009/FesSum2025Guide_00931](custom/009/FesSum2025Guide_00931) |      15 |       0 |       0 |        0 |
| [cut_scene/072/VoiceMan_07200](cut_scene/072/VoiceMan_07200) |     416 |       0 |       0 |        0 |
| [cut_scene/072/VoiceMan_07210](cut_scene/072/VoiceMan_07210) |       6 |       0 |       0 |        0 |
| [cut_scene/072/VoiceMan_07220](cut_scene/072/VoiceMan_07220) |       1 |       0 |       0 |        0 |
| [cut_scene/073/VoiceMan_07300](cut_scene/073/VoiceMan_07300) |     588 |       0 |       0 |        0 |
| [cut_scene/073/VoiceMan_07310](cut_scene/073/VoiceMan_07310) |       1 |       0 |       0 |        0 |
| [quest/006/TstPln901_00607](quest/006/TstPln901_00607) |       0 |       0 |      95 |        0 |
| [quest/006/TstPln906_00664](quest/006/TstPln906_00664) |      17 |       0 |       0 |        0 |
| [quest/006/TstPln907_00665](quest/006/TstPln907_00665) |      93 |      48 |       0 |        0 |
| [quest/008/GaiUsb610_00892](quest/008/GaiUsb610_00892) |       0 |       2 |       0 |        0 |
| [quest/009/TstPln925_00976](quest/009/TstPln925_00976) |       6 |       0 |       0 |        0 |
| [quest/009/TstPln926_00977](quest/009/TstPln926_00977) |     102 |       0 |       0 |        0 |
| [quest/017/HeaVnz111_01760](quest/017/HeaVnz111_01760) |       0 |       2 |       0 |        0 |
| [quest/019/HeaVnz826_01956](quest/019/HeaVnz826_01956) |       0 |       1 |       0 |        0 |
| [quest/021/TstPln102_02146](quest/021/TstPln102_02146) |       0 |       0 |       6 |        0 |
| [quest/021/TstPln104_02148](quest/021/TstPln104_02148) |       0 |      20 |      42 |        0 |
| [quest/023/TstPln204_02367](quest/023/TstPln204_02367) |       0 |       0 |      35 |        0 |
| [quest/024/StmBda111_02451](quest/024/StmBda111_02451) |       0 |       1 |       0 |        0 |
| [quest/025/JobPld630_02572](quest/025/JobPld630_02572) |       0 |       2 |       0 |        0 |
| [quest/027/StmBdz401_02724](quest/027/StmBdz401_02724) |       0 |       1 |       0 |        0 |
| [quest/027/StmBdz615_02793](quest/027/StmBdz615_02793) |       0 |       1 |       0 |        0 |
| [quest/028/ClsFsh630_02896](quest/028/ClsFsh630_02896) |       0 |       1 |       0 |        0 |
| [quest/028/ClsFsh650_02897](quest/028/ClsFsh650_02897) |       0 |       1 |       0 |        0 |
| [quest/029/JobNin650_02950](quest/029/JobNin650_02950) |       0 |       2 |       0 |        0 |
| [quest/029/JobNin680_02951](quest/029/JobNin680_02951) |       0 |       1 |       0 |        0 |
| [quest/041/AktKba311_04115](quest/041/AktKba311_04115) |       0 |       1 |       0 |        0 |
| [quest/048/KinGba001_04817](quest/048/KinGba001_04817) |       0 |       1 |       0 |        0 |
| [quest/048/KinGba331_04833](quest/048/KinGba331_04833) |       0 |       1 |       0 |        0 |
| [quest/048/KinGba511_04843](quest/048/KinGba511_04843) |       0 |       1 |       0 |        0 |
| [quest/048/KinGma111_04870](quest/048/KinGma111_04870) |       0 |       1 |       0 |        0 |
| [quest/048/KinGmc101_04897](quest/048/KinGmc101_04897) |       0 |       1 |       0 |        0 |
| [quest/049/KinGla401_04989](quest/049/KinGla401_04989) |       0 |       1 |       0 |        0 |
| [quest/049/KinGmc107_04903](quest/049/KinGmc107_04903) |       0 |       1 |       0 |        0 |
| [quest/049/KinGmf110_04955](quest/049/KinGmf110_04955) |       0 |       1 |       0 |        0 |
| [quest/049/KinGra105_04964](quest/049/KinGra105_04964) |       0 |       2 |       0 |        0 |
| [quest/050/KinGla507_05002](quest/050/KinGla507_05002) |       0 |       1 |       0 |        0 |
| [quest/050/KinGzb002_05031](quest/050/KinGzb002_05031) |       0 |       1 |       0 |        0 |
| [quest/050/KinGzc010_05069](quest/050/KinGzc010_05069) |       0 |       1 |       0 |        0 |
| [quest/050/KinGzc105_05075](quest/050/KinGzc105_05075) |       0 |       1 |       0 |        0 |
| [quest/050/KinGzc106_05076](quest/050/KinGzc106_05076) |       0 |       1 |       0 |        0 |
| [quest/050/KinGzd004_05093](quest/050/KinGzd004_05093) |       0 |       1 |       0 |        0 |
| [quest/051/KinGzd108_05107](quest/051/KinGzd108_05107) |       1 |      36 |       0 |        0 |
| [quest/051/KinGze014_05132](quest/051/KinGze014_05132) |       0 |       1 |       0 |        0 |
| [quest/052/BanMam001_05255](quest/052/BanMam001_05255) |     188 |       0 |       0 |        0 |
| [quest/052/BanMam002_05256](quest/052/BanMam002_05256) |     123 |       0 |       0 |        0 |
| [quest/052/BanMam003_05257](quest/052/BanMam003_05257) |     132 |       0 |       0 |        0 |
| [quest/052/BanMam004_05258](quest/052/BanMam004_05258) |     172 |       0 |       0 |        0 |
| [quest/052/BanMam005_05259](quest/052/BanMam005_05259) |     188 |       0 |       0 |        0 |
| [quest/052/BanMam006_05260](quest/052/BanMam006_05260) |     108 |       0 |       0 |        0 |
| [quest/052/BanMam101_05261](quest/052/BanMam101_05261) |      65 |       0 |       0 |        0 |
| [quest/052/BanMam102_05262](quest/052/BanMam102_05262) |      63 |       0 |       0 |        0 |
| [quest/052/BanMam103_05263](quest/052/BanMam103_05263) |      61 |       0 |       0 |        0 |
| [quest/052/BanMam104_05264](quest/052/BanMam104_05264) |      70 |       0 |       0 |        0 |
| [quest/052/BanMam105_05265](quest/052/BanMam105_05265) |      60 |       0 |       0 |        0 |
| [quest/052/BanMam106_05266](quest/052/BanMam106_05266) |      65 |       0 |       0 |        0 |
| [quest/052/BanMam107_05267](quest/052/BanMam107_05267) |      59 |       0 |       0 |        0 |
| [quest/052/BanMam108_05268](quest/052/BanMam108_05268) |      60 |       0 |       0 |        0 |
| [quest/052/BanMam109_05269](quest/052/BanMam109_05269) |      63 |       0 |       0 |        0 |
| [quest/052/BanMam110_05270](quest/052/BanMam110_05270) |      69 |       0 |       0 |        0 |
| [quest/052/BanMam111_05271](quest/052/BanMam111_05271) |      61 |       0 |       0 |        0 |
| [quest/052/BanMam112_05272](quest/052/BanMam112_05272) |      63 |       0 |       0 |        0 |
| [quest/052/BanMam113_05273](quest/052/BanMam113_05273) |      67 |       0 |       0 |        0 |
| [quest/052/BanMam114_05274](quest/052/BanMam114_05274) |      62 |       0 |       0 |        0 |
| [quest/052/BanMam115_05275](quest/052/BanMam115_05275) |      77 |       0 |       0 |        0 |
| [quest/052/BanMam116_05276](quest/052/BanMam116_05276) |      60 |       0 |       0 |        0 |
| [quest/052/BanMam117_05277](quest/052/BanMam117_05277) |      64 |       0 |       0 |        0 |
| [quest/052/BanMam118_05278](quest/052/BanMam118_05278) |      76 |       0 |       0 |        0 |
| [quest/052/BanMam119_05279](quest/052/BanMam119_05279) |      76 |       0 |       0 |        0 |
| [quest/052/BanMam120_05280](quest/052/BanMam120_05280) |      64 |       0 |       0 |        0 |
| [quest/052/BanMam121_05281](quest/052/BanMam121_05281) |      62 |       0 |       0 |        0 |
| [quest/052/BanMam122_05282](quest/052/BanMam122_05282) |      65 |       0 |       0 |        0 |
| [quest/052/BanMam123_05283](quest/052/BanMam123_05283) |      63 |       0 |       0 |        0 |
| [quest/052/BanMam124_05284](quest/052/BanMam124_05284) |      64 |       0 |       0 |        0 |
| [quest/052/BanMam125_05285](quest/052/BanMam125_05285) |      63 |       0 |       0 |        0 |
| [quest/052/BanMam126_05286](quest/052/BanMam126_05286) |      67 |       0 |       0 |        0 |
| [quest/052/BanMam127_05287](quest/052/BanMam127_05287) |      71 |       0 |       0 |        0 |
| [quest/052/BanMam128_05288](quest/052/BanMam128_05288) |      66 |       0 |       0 |        0 |
| [quest/052/ChrHdb921_05295](quest/052/ChrHdb921_05295) |     203 |       0 |       0 |        0 |
| [quest/052/ChrHdb922_05296](quest/052/ChrHdb922_05296) |     176 |       0 |       0 |        0 |
| [quest/052/FesAnx101_05297](quest/052/FesAnx101_05297) |     112 |       0 |       0 |        0 |
| [quest/052/FesAnx102_05298](quest/052/FesAnx102_05298) |     168 |       0 |       0 |        0 |
| [quest/052/FesPdx002_05238](quest/052/FesPdx002_05238) |       0 |       1 |       0 |        0 |
| [quest/052/KinGmh101_05299](quest/052/KinGmh101_05299) |      88 |       0 |       0 |        0 |
| [quest/052/KinGra201_05289](quest/052/KinGra201_05289) |     160 |       0 |       0 |        0 |
| [quest/052/KinGra202_05290](quest/052/KinGra202_05290) |      57 |       0 |       0 |        0 |
| [quest/052/KinGra203_05291](quest/052/KinGra203_05291) |      82 |       0 |       0 |        0 |
| [quest/052/KinGra204_05292](quest/052/KinGra204_05292) |     114 |       0 |       0 |        0 |
| [quest/052/KinGra205_05293](quest/052/KinGra205_05293) |     157 |       0 |       0 |        0 |
| [quest/052/KinGra206_05294](quest/052/KinGra206_05294) |     118 |       0 |       0 |        0 |
| [quest/052/KinGwk101_05253](quest/052/KinGwk101_05253) |     148 |       0 |       0 |        0 |
| [quest/052/KinGwk102_05254](quest/052/KinGwk102_05254) |     172 |       0 |       0 |        0 |
| [quest/053/FesGsc901_05322](quest/053/FesGsc901_05322) |     153 |       0 |       0 |        0 |
| [quest/053/FesSux101_05321](quest/053/FesSux101_05321) |     150 |       0 |       0 |        0 |
| [quest/053/FesVlx201_05325](quest/053/FesVlx201_05325) |     158 |       0 |       0 |        0 |
| [quest/053/KinGkd001_05309](quest/053/KinGkd001_05309) |     163 |       0 |       0 |        0 |
| [quest/053/KinGkd002_05310](quest/053/KinGkd002_05310) |      98 |       0 |       0 |        0 |
| [quest/053/KinGkd003_05311](quest/053/KinGkd003_05311) |      91 |       0 |       0 |        0 |
| [quest/053/KinGkd004_05312](quest/053/KinGkd004_05312) |      71 |       0 |       0 |        0 |
| [quest/053/KinGkd005_05313](quest/053/KinGkd005_05313) |      63 |       0 |       0 |        0 |
| [quest/053/KinGkd006_05314](quest/053/KinGkd006_05314) |      72 |       0 |       0 |        0 |
| [quest/053/KinGkd007_05315](quest/053/KinGkd007_05315) |      79 |       0 |       0 |        0 |
| [quest/053/KinGkd008_05316](quest/053/KinGkd008_05316) |      78 |       0 |       0 |        0 |
| [quest/053/KinGkd009_05317](quest/053/KinGkd009_05317) |     114 |       0 |       0 |        0 |
| [quest/053/KinGkd010_05318](quest/053/KinGkd010_05318) |      68 |       0 |       0 |        0 |
| [quest/053/KinGkw001_05319](quest/053/KinGkw001_05319) |     115 |       0 |       0 |        0 |
| [quest/053/KinGkw002_05320](quest/053/KinGkw002_05320) |      93 |       0 |       0 |        0 |
| [quest/053/KinGmh102_05300](quest/053/KinGmh102_05300) |      99 |       0 |       0 |        0 |
| [quest/053/KinGmh103_05301](quest/053/KinGmh103_05301) |     181 |       0 |       0 |        0 |
| [quest/053/KinGmh104_05302](quest/053/KinGmh104_05302) |      84 |       0 |       0 |        0 |
| [quest/053/KinGmh105_05303](quest/053/KinGmh105_05303) |      81 |       0 |       0 |        0 |
| [quest/053/KinGmh106_05304](quest/053/KinGmh106_05304) |      90 |       0 |       0 |        0 |
| [quest/053/KinGmh107_05305](quest/053/KinGmh107_05305) |     121 |       0 |       0 |        0 |
| [quest/053/KinGmh108_05306](quest/053/KinGmh108_05306) |     136 |       0 |       0 |        0 |
| [quest/053/KinGwz001_05323](quest/053/KinGwz001_05323) |     104 |       0 |       0 |        0 |
| [quest/053/KinGwz002_05324](quest/053/KinGwz002_05324) |     102 |       0 |       0 |        0 |
| [quest/053/KinGza101_05307](quest/053/KinGza101_05307) |     124 |       0 |       0 |        0 |
| [quest/053/TstPln801_05308](quest/053/TstPln801_05308) |      48 |       0 |       0 |        0 |