ffxiv-diff/7.3/index.md
---
title: FFXIV Diff Tables
---
## 7.3

[← return to patch list](https://makar8000.github.io/ffxiv-diff/)

| Sheet | Inserts | Updates | Deletes | Reorders |
| :---- | ------: | ------: | ------: | -------: |
| [Achievement](Achievement) |       0 |       0 |    3744 |        0 |
| [ActionCastTimeline](ActionCastTimeline) |       9 |       1 |       0 |        0 |
| [ActionCastVFX](ActionCastVFX) |      40 |       0 |       0 |        0 |
| [ActionCostType](ActionCostType) |      21 |       0 |       0 |        0 |
| [ActionParam](ActionParam) |      21 |       3 |       0 |        0 |
| [ActionProcStatus](ActionProcStatus) |      26 |       0 |       0 |        0 |
| [ActionTimelineMove](ActionTimelineMove) |       4 |       0 |       0 |        0 |
| [ActionTimeline](ActionTimeline) |       0 |     229 |       0 |        0 |
| [ActionTransient](ActionTransient) |    2300 |     120 |       0 |        0 |
| [Action](Action) |    2300 |     448 |       0 |        0 |
| [AddonParam](AddonParam) |       7 |       0 |       0 |        0 |
| [AddonTransient](AddonTransient) |       0 |       5 |       0 |        0 |
| [Addon](Addon) |     131 |      49 |      13 |        0 |
| [AetheryteSystemDefine](AetheryteSystemDefine) |      14 |       0 |       0 |        0 |
| [Aetheryte](Aetheryte) |       0 |       1 |       0 |        0 |
| [AkatsukiNoteString](AkatsukiNoteString) |       6 |       1 |       0 |        0 |
| [AkatsukiNote](AkatsukiNote) |       0 |       2 |       0 |        0 |
| [AquariumFish](AquariumFish) |      11 |       0 |       0 |        0 |
| [ArchiveItem](ArchiveItem) |       6 |       0 |       0 |        0 |
| [ArrayEventHandler](ArrayEventHandler) |      25 |       3 |       0 |        0 |
| [Attract](Attract) |       3 |       1 |       0 |        0 |
| [BGMSituation](BGMSituation) |       5 |       0 |       0 |        0 |
| [BGMSwitch](BGMSwitch) |      57 |      26 |       0 |        0 |
| [BGM](BGM) |      56 |       0 |       0 |        0 |
| [BNpcBasePopVfx](BNpcBasePopVfx) |       0 |       2 |       0 |        0 |
| [BNpcBase](BNpcBase) |     401 |     184 |       0 |        0 |
| [BNpcCustomize](BNpcCustomize) |      70 |      14 |       0 |        0 |
| [BNpcName](BNpcName) |     200 |     113 |       0 |        0 |
| [BNpcParts](BNpcParts) |       0 |      75 |       0 |        0 |
| [Balloon](Balloon) |     658 |      17 |       0 |        0 |
| [BannerBg](BannerBg) |      30 |      22 |       0 |        0 |
| [BannerCondition](BannerCondition) |     100 |     743 |       0 |        0 |
| [BannerDecoration](BannerDecoration) |      40 |       7 |       0 |        0 |
| [BannerDesignPreset](BannerDesignPreset) |      40 |      12 |       0 |        0 |
| [BannerFrame](BannerFrame) |      30 |      10 |       0 |        0 |
| [BannerObtainHintType](BannerObtainHintType) |       6 |       0 |       0 |        0 |
| [BannerTimeline](BannerTimeline) |       0 |      15 |       0 |        0 |
| [BaseParam](BaseParam) |       0 |      12 |       0 |        0 |
| [BeastRankBonus](BeastRankBonus) |       1 |       0 |       0 |        0 |
| [BeastTribe](BeastTribe) |       1 |      19 |       0 |        0 |
| [Behavior](Behavior) |    9159 |     156 |      23 |        0 |
| [BuddyEquip](BuddyEquip) |       8 |       1 |       0 |        0 |
| [CSBonusContentIdentifier](CSBonusContentIdentifier) |      10 |       0 |       0 |        0 |
| [CSBonusContentType](CSBonusContentType) |       3 |       2 |       0 |        0 |
| [CSBonusContent](CSBonusContent) |      20 |       0 |       0 |        0 |
| [CSBonusMission](CSBonusMission) |      91 |       0 |       0 |        0 |
| [CSBonusSeason](CSBonusSeason) |       4 |       1 |       0 |        0 |
| [CSBonusTextData](CSBonusTextData) |       1 |       0 |       0 |        0 |
| [CabinetSubCategory](CabinetSubCategory) |       0 |       3 |       0 |        0 |
| [Cabinet](Cabinet) |     104 |       0 |       0 |        0 |
| [Carry](Carry) |      27 |       0 |       0 |        0 |
| [Channeling](Channeling) |      13 |       0 |       0 |        0 |
| [CharaCardBase](CharaCardBase) |      10 |       3 |       0 |        0 |
| [CharaCardDecoration](CharaCardDecoration) |      60 |     103 |       0 |        0 |
| [CharaCardDesignPreset](CharaCardDesignPreset) |       0 |       8 |       0 |        0 |
| [CharaCardHeader](CharaCardHeader) |      16 |       3 |       0 |        0 |
| [CharaMakeCustomize](CharaMakeCustomize) |       0 |      70 |       0 |        0 |
| [CharaMakeType](CharaMakeType) |       0 |       8 |       0 |        0 |
| [ChatBubbleSampeTextList](ChatBubbleSampeTextList) |      43 |       0 |       0 |        0 |
| [ChatBubbleType](ChatBubbleType) |      26 |       0 |       0 |        0 |
| [ChocoboRaceTutorial](ChocoboRaceTutorial) |       0 |      12 |       0 |        0 |
| [ClassJobActionUI](ClassJobActionUI) |      31 |       0 |       0 |        0 |
| [ClassJobCategory](ClassJobCategory) |       4 |       0 |       0 |        0 |
| [ClassJobResident](ClassJobResident) |      18 |       0 |       0 |        0 |
| [ClassJob](ClassJob) |       0 |       0 |      43 |        0 |
| [ColosseumMatchRank](ColosseumMatchRank) |       2 |       0 |       0 |        0 |
| [Colosseum](Colosseum) |       3 |       0 |       0 |        0 |
| [CompanionTransient](CompanionTransient) |      16 |       4 |       0 |        0 |
| [Companion](Companion) |      16 |      12 |       0 |        0 |
| [CompanyCraftPart](CompanyCraftPart) |     133 |       0 |       0 |        0 |
| [CompanyCraftProcess](CompanyCraftProcess) |      75 |       0 |       0 |        0 |
| [CompanyCraftSequence](CompanyCraftSequence) |       3 |       0 |       0 |        0 |
| [CompanyCraftSupplyItem](CompanyCraftSupplyItem) |     107 |       0 |       0 |        0 |
| [CompleteJournalCategory](CompleteJournalCategory) |       1 |      89 |       0 |        0 |
| [CompleteJournal](CompleteJournal) |     110 |    7443 |       0 |        0 |
| [Completion](Completion) |       6 |      23 |       1 |        0 |
| [ContentAttributeRect](ContentAttributeRect) |       2 |       1 |       0 |        0 |
| [ContentCloseCycle](ContentCloseCycle) |       2 |       2 |       0 |        0 |
| [ContentDirectorBattleTalk](ContentDirectorBattleTalk) |     138 |      16 |       0 |        0 |
| [ContentDirectorManagedSG](ContentDirectorManagedSG) |     455 |       0 |       0 |        0 |
| [ContentExAction](ContentExAction) |       1 |       0 |       0 |        0 |
| [ContentFinderConditionTransient](ContentFinderConditionTransient) |      34 |       2 |       0 |        0 |
| [ContentFinderCondition](ContentFinderCondition) |      34 |     439 |       0 |        0 |
| [ContentGauge](ContentGauge) |       2 |       0 |       0 |        0 |
| [ContentMemberType](ContentMemberType) |       0 |       1 |       0 |        0 |
| [ContentRoulette](ContentRoulette) |       0 |      35 |       0 |        0 |
| [ContentTodo](ContentTodo) |      19 |       0 |       0 |        0 |
| [ContentType](ContentType) |       1 |       0 |       0 |        0 |
| [ContentsNoteCategory](ContentsNoteCategory) |       1 |       2 |       0 |        0 |
| [ContentsNote](ContentsNote) |      16 |       0 |       0 |        0 |
| [ContentsTutorialPage](ContentsTutorialPage) |       0 |       3 |       0 |        0 |
| [CreditList](CreditList) |     110 |       0 |       0 |        0 |
| [CustomTalkResident](CustomTalkResident) |      22 |       1 |       0 |        0 |
| [CustomTalk](CustomTalk) |      22 |      12 |       0 |        0 |
| [CutActionTimeline](CutActionTimeline) |       0 |       1 |       0 |        0 |
| [CutSceneIncompQuest](CutSceneIncompQuest) |       1 |       0 |       0 |        0 |
| [CutScreenImage](CutScreenImage) |      10 |       9 |       0 |        0 |
| [CutsceneEventMotion](CutsceneEventMotion) |       2 |       4 |       0 |        0 |
| [CutsceneWorkIndex](CutsceneWorkIndex) |       0 |      13 |       0 |        0 |
| [Cutscene](Cutscene) |       0 |      49 |       0 |        0 |
| [CuttingGrass](CuttingGrass) |       2 |       0 |       0 |        0 |
| [DawnContentParticipable](DawnContentParticipable) |      22 |       1 |       0 |        0 |
| [DawnContent](DawnContent) |       2 |       1 |       0 |        0 |
| [DawnMemberUIParam](DawnMemberUIParam) |       1 |       0 |       0 |        0 |
| [DawnMember](DawnMember) |       1 |       0 |       0 |        0 |
| [DawnQuestMember](DawnQuestMember) |       1 |       0 |       0 |        0 |
| [DeepDungeon4GimmickEffectTransient](DeepDungeon4GimmickEffectTransient) |      11 |       0 |       0 |        0 |
| [DeepDungeon4GimmickEffect](DeepDungeon4GimmickEffect) |      11 |       0 |       0 |        0 |
| [DeepDungeonBan](DeepDungeonBan) |       1 |       0 |       0 |        0 |
| [DeepDungeonDemiclone](DeepDungeonDemiclone) |       2 |       0 |       0 |        0 |
| [DeepDungeonEquipment](DeepDungeonEquipment) |       2 |       0 |       0 |        0 |
| [DeepDungeonFloorEffectUI](DeepDungeonFloorEffectUI) |       1 |       0 |       0 |        0 |
| [DeepDungeonGrowData](DeepDungeonGrowData) |      10 |       0 |       0 |        0 |
| [DeepDungeonHardModeItem](DeepDungeonHardModeItem) |       6 |       0 |       0 |        0 |
| [DeepDungeonItem](DeepDungeonItem) |       3 |      35 |       0 |        0 |
| [DeepDungeonLayer](DeepDungeonLayer) |      12 |      41 |       0 |        0 |
| [DeepDungeonMagicStone](DeepDungeonMagicStone) |       1 |       0 |       0 |        0 |
| [DeepDungeonMap5X](DeepDungeonMap5X) |      60 |       0 |       0 |        0 |
| [DeepDungeonResident](DeepDungeonResident) |       5 |       0 |       0 |        0 |
| [DeepDungeon](DeepDungeon) |       1 |       3 |       0 |        0 |
| [DefaultTalk](DefaultTalk) |     258 |       1 |       0 |        0 |
| [DescriptionPage](DescriptionPage) |      49 |      20 |       0 |        0 |
| [DescriptionSection](DescriptionSection) |      21 |       0 |       0 |        0 |
| [DescriptionStandAloneTransient](DescriptionStandAloneTransient) |       1 |       0 |       0 |        0 |
| [DescriptionStandAlone](DescriptionStandAlone) |       1 |       0 |       0 |        0 |
| [DescriptionString](DescriptionString) |     167 |      20 |       0 |        0 |
| [DpsChallengeOfficer](DpsChallengeOfficer) |       0 |       1 |       0 |        0 |
| [DpsChallengeTransient](DpsChallengeTransient) |       2 |       0 |       0 |        0 |
| [DpsChallenge](DpsChallenge) |       2 |       0 |       0 |        0 |
| [ENpcBase](ENpcBase) |       0 |       0 |   54401 |        0 |
| [ENpcResident](ENpcResident) |    1720 |     209 |       0 |        0 |
| [EObjName](EObjName) |       0 |     118 |       0 |        0 |
| [EObj](EObj) |       0 |     118 |       0 |        0 |
| [EmjCostumeData](EmjCostumeData) |       3 |       0 |       0 |        0 |
| [EmjCostume](EmjCostume) |       3 |       0 |       0 |        0 |
| [EmjVoiceNpc](EmjVoiceNpc) |       3 |       0 |       0 |        0 |
| [EmoteMode](EmoteMode) |       5 |       0 |       0 |        0 |
| [EmoteTransient](EmoteTransient) |      20 |       3 |       0 |        0 |
| [Emote](Emote) |      20 |      30 |       0 |        0 |
| [EquipSlotCategory](EquipSlotCategory) |       1 |       1 |       0 |        0 |
| [EventAction](EventAction) |       8 |      10 |       0 |        0 |
| [EventExtraConditionSet](EventExtraConditionSet) |       6 |       0 |       0 |        0 |
| [EventItemCategory](EventItemCategory) |       1 |       0 |       0 |        0 |
| [EventItemHelp](EventItemHelp) |      27 |       2 |       0 |        0 |
| [EventItem](EventItem) |      27 |       4 |       0 |        0 |
| [EventMountGimmickPathMove](EventMountGimmickPathMove) |      78 |       0 |       0 |        0 |
| [EventTutorialPage](EventTutorialPage) |      29 |       0 |       0 |        0 |
| [EventTutorial](EventTutorial) |      11 |       0 |       0 |        0 |
| [ExVersion](ExVersion) |       0 |       0 |       0 |        0 |
| [ExportedGatheringPoint](ExportedGatheringPoint) |      28 |       0 |       0 |        0 |
| [ExportedSG](ExportedSG) |     269 |       1 |       0 |        0 |
| [FashionCheckThemeCategory](FashionCheckThemeCategory) |       2 |       0 |       0 |        0 |
| [FashionCheckWeeklyTheme](FashionCheckWeeklyTheme) |      20 |       0 |       0 |        0 |
| [FateRuleEx](FateRuleEx) |       2 |       0 |       0 |        0 |
| [Fate](Fate) |       0 |     232 |       0 |        0 |
| [Festival](Festival) |       8 |      23 |       0 |        0 |
| [FishParameterReverse](FishParameterReverse) |     221 |       0 |       0 |        0 |
| [FishParameter](FishParameter) |     236 |       6 |       0 |        0 |
| [FishingBaitParameter](FishingBaitParameter) |      23 |       0 |       0 |        0 |
| [FishingNoteInfo](FishingNoteInfo) |     236 |      58 |       0 |        0 |
| [FishingSpot](FishingSpot) |      59 |      11 |       0 |        0 |
| [FittingShopCategoryItem](FittingShopCategoryItem) |      18 |      59 |       0 |        0 |
| [FittingShopItemSet](FittingShopItemSet) |       6 |       0 |       0 |        0 |
| [FurnitureCatalogCategory](FurnitureCatalogCategory) |       1 |       3 |       0 |        0 |
| [FurnitureCatalogItemList](FurnitureCatalogItemList) |      35 |     140 |       0 |        0 |
| [GameConditionValueArray](GameConditionValueArray) |     115 |       0 |       0 |        0 |
| [GameRewardObtainType](GameRewardObtainType) |       2 |       0 |       0 |        0 |
| [GardeningSeed](GardeningSeed) |       1 |       0 |       0 |        0 |
| [GathererCrafterTool](GathererCrafterTool) |      55 |       0 |       0 |        0 |
| [GathererReductionReward](GathererReductionReward) |     120 |       0 |       0 |        0 |
| [GatheringItemLevelConvertTable](GatheringItemLevelConvertTable) |      20 |       0 |       0 |        0 |
| [GatheringItemPoint](GatheringItemPoint) |       4 |       0 |       0 |        0 |
| [GatheringItem](GatheringItem) |     100 |       5 |       0 |        0 |
| [GatheringNotebookItem](GatheringNotebookItem) |       4 |     345 |       0 |        0 |
| [GatheringNotebookList](GatheringNotebookList) |       0 |       4 |       0 |        0 |
| [GatheringPointBase](GatheringPointBase) |      96 |       4 |       0 |        0 |
| [GatheringPointBonus](GatheringPointBonus) |       0 |       4 |       0 |        0 |
| [GatheringPointTransient](GatheringPointTransient) |     180 |       0 |       0 |        0 |
| [GatheringPoint](GatheringPoint) |     180 |       0 |       0 |        0 |
| [GeneralAction](GeneralAction) |       0 |       7 |       0 |        0 |
| [GilShopInfo](GilShopInfo) |     400 |      15 |       0 |        0 |
| [GilShopItem](GilShopItem) |     137 |       2 |       0 |        0 |
| [GilShop](GilShop) |       8 |       2 |       0 |        0 |
| [GimmickAccessor](GimmickAccessor) |      44 |       0 |       0 |        0 |
| [GimmickJump](GimmickJump) |       0 |       3 |       0 |        0 |
| [GimmickRect](GimmickRect) |     149 |       0 |       0 |        0 |
| [GimmickTalk](GimmickTalk) |       3 |       5 |       0 |        0 |
| [GimmickYesNo](GimmickYesNo) |       0 |       1 |       0 |        0 |
| [GlassesStyle](GlassesStyle) |      12 |       0 |       0 |        0 |
| [Glasses](Glasses) |     144 |       0 |       0 |        0 |
| [GroupPoseFrame](GroupPoseFrame) |       2 |       3 |       0 |        0 |
| [GroupPoseStampCategory](GroupPoseStampCategory) |       0 |       2 |       0 |        0 |
| [GroupPoseStamp](GroupPoseStamp) |      50 |      99 |       0 |        0 |
| [HairMakeType](HairMakeType) |       0 |      32 |       0 |        0 |
| [HalloweenNpcSelect](HalloweenNpcSelect) |      69 |       0 |       0 |        0 |
| [HousingEmploymentNpcList](HousingEmploymentNpcList) |       8 |       0 |       0 |        0 |
| [HousingEmploymentNpcRace](HousingEmploymentNpcRace) |       2 |       0 |       0 |        0 |
| [HousingExterior](HousingExterior) |     100 |       0 |       0 |        0 |
| [HousingFurniture](HousingFurniture) |     114 |       5 |       0 |        0 |
| [HousingInterior](HousingInterior) |      16 |       0 |       0 |        0 |
| [HousingYardObject](HousingYardObject) |      29 |       0 |       0 |        0 |
| [HowToPage](HowToPage) |      11 |       6 |       0 |        0 |
| [HowTo](HowTo) |       0 |      12 |       0 |        0 |
| [InclusionShopSeries](InclusionShopSeries) |       4 |       4 |       0 |        0 |
| [InstanceContentGuide](InstanceContentGuide) |       4 |       0 |       0 |        0 |
| [InstanceContentRewardItem](InstanceContentRewardItem) |      10 |       1 |       0 |        0 |
| [InstanceContentTextData](InstanceContentTextData) |     701 |      76 |       5 |        0 |
| [InstanceContent](InstanceContent) |      24 |      28 |       0 |        0 |
| [ItemActionTelepo](ItemActionTelepo) |       1 |       0 |       0 |        0 |
| [ItemAction](ItemAction) |       0 |      37 |       0 |        0 |
| [ItemFood](ItemFood) |       3 |       0 |       0 |        0 |
| [ItemLevel](ItemLevel) |       0 |      30 |       0 |        0 |
| [ItemSortCategory](ItemSortCategory) |       4 |       1 |       0 |        0 |
| [Item](Item) |     400 |    4027 |       0 |        0 |
| [Jingle](Jingle) |       6 |       0 |       0 |        0 |
| [JournalCategory](JournalCategory) |       1 |      99 |       0 |        0 |
| [JournalGenre](JournalGenre) |       3 |     267 |       0 |        0 |
| [Knockback](Knockback) |       4 |       1 |       0 |        0 |
| [LFGExtensionContent](LFGExtensionContent) |       6 |       0 |       0 |        0 |
| [LegacyQuest](LegacyQuest) |       0 |     295 |       0 |        0 |
| [Level](Level) |     504 |      12 |       0 |        0 |
| [LiveMinigamesTerritoryType](LiveMinigamesTerritoryType) |       2 |       0 |       0 |        0 |
| [LiveMinigames](LiveMinigames) |       2 |       0 |       0 |        0 |
| [LivelyActorGroup](LivelyActorGroup) |     313 |       2 |       0 |        0 |
| [Lobby](Lobby) |       0 |      54 |       0 |        0 |
| [Lockon](Lockon) |      20 |       0 |       0 |        0 |
| [LogFilter](LogFilter) |       0 |       1 |       0 |        0 |
| [LogKind](LogKind) |       0 |       1 |       0 |        0 |
| [LogMessage](LogMessage) |     150 |      93 |       0 |        0 |
| [LotteryExchangeShop](LotteryExchangeShop) |       1 |       0 |       0 |        0 |
| [MacroIconRedirectOld](MacroIconRedirectOld) |       0 |       1 |       0 |        0 |
| [MainCommand](MainCommand) |       1 |       0 |       0 |        0 |
| [MapCondition](MapCondition) |       1 |      28 |       0 |        0 |
| [MapMarker](MapMarker) |     159 |      21 |       0 |        0 |
| [MapReplace](MapReplace) |      77 |       0 |       0 |        0 |
| [MapSymbol](MapSymbol) |       2 |       0 |       0 |        0 |
| [MapTransientPvPMap](MapTransientPvPMap) |      68 |       0 |       0 |        0 |
| [MassivePcContentBattleTalk](MassivePcContentBattleTalk) |     118 |      18 |       0 |        0 |
| [MassivePcContentTextData](MassivePcContentTextData) |     200 |      31 |       0 |        0 |
| [MassivePcContentTodo](MassivePcContentTodo) |       6 |      65 |       0 |        0 |
| [MassivePcContent](MassivePcContent) |       2 |       1 |       0 |        0 |
| [MirageStoreSetItemLookup](MirageStoreSetItemLookup) |      58 |       0 |       0 |        0 |
| [MirageStoreSetItem](MirageStoreSetItem) |      19 |       0 |       0 |        0 |
| [ModelChara](ModelChara) |     200 |     168 |       0 |        0 |
| [ModelSkeleton](ModelSkeleton) |      24 |       1 |       0 |        0 |
| [ModelState](ModelState) |       5 |       5 |       0 |        0 |
| [MotionTimelineAdvanceBlend](MotionTimelineAdvanceBlend) |       0 |      14 |       0 |        0 |
| [MotionTimelineBlendTable](MotionTimelineBlendTable) |       0 |      71 |       0 |        0 |
| [MotionTimeline](MotionTimeline) |       0 |     197 |       0 |        0 |
| [MountAction](MountAction) |       5 |       2 |       0 |        0 |
| [MountCustomize](MountCustomize) |      10 |       4 |       0 |        0 |
| [MountSpeed](MountSpeed) |       3 |       1 |       0 |        0 |
| [MountTransient](MountTransient) |      50 |       3 |       0 |        0 |
| [Mount](Mount) |      50 |     303 |       0 |        0 |
| [NotebookDivision](NotebookDivision) |       1 |      16 |       0 |        0 |
| [NpcEquip](NpcEquip) |       0 |       0 |    2951 |        0 |
| [NpcYell](NpcYell) |     341 |      59 |       0 |        0 |
| [Omen](Omen) |      58 |       0 |       0 |        0 |
| [OmikujiGuidance](OmikujiGuidance) |      12 |       0 |       0 |        0 |
| [OpenContentCandidateName](OpenContentCandidateName) |       2 |       0 |       0 |        0 |
| [OpenContent](OpenContent) |       0 |       1 |       0 |        0 |
| [OpenLuaUI](OpenLuaUI) |       4 |       0 |       0 |        0 |
| [OrchestrionPath](OrchestrionPath) |      38 |       0 |       0 |        0 |
| [OrchestrionUiparam](OrchestrionUiparam) |      38 |       0 |       0 |        0 |
| [Orchestrion](Orchestrion) |      38 |       6 |       0 |        0 |
| [OrnamentAction](OrnamentAction) |       1 |       0 |       0 |        0 |
| [OrnamentTransient](OrnamentTransient) |       3 |       1 |       0 |        0 |
| [Ornament](Ornament) |       3 |       1 |       0 |        0 |
| [Permission](Permission) |       1 |       1 |       0 |        0 |
| [Pet](Pet) |       5 |       0 |       0 |        0 |
| [PlaceName](PlaceName) |       0 |      56 |       0 |        0 |
| [PlantPotFlowerSeed](PlantPotFlowerSeed) |       1 |       0 |       0 |        0 |
| [Platform](Platform) |      21 |       0 |       0 |        0 |
| [PointMenuChoice](PointMenuChoice) |      25 |       0 |       0 |        0 |
| [PointMenuString](PointMenuString) |      25 |       0 |       0 |        0 |
| [PointMenu](PointMenu) |       3 |       0 |       0 |        0 |
| [PvPSeries](PvPSeries) |       1 |       0 |       0 |        0 |
| [QuestAcceptAdditionCondition](QuestAcceptAdditionCondition) |       1 |      45 |       0 |        0 |
| [QuestChapter](QuestChapter) |      35 |       0 |       0 |        0 |
| [QuestClassJobReward](QuestClassJobReward) |      29 |       0 |       0 |        0 |
| [QuestClassJobSupply](QuestClassJobSupply) |       0 |     345 |       0 |        0 |
| [QuestCustomTodo](QuestCustomTodo) |       1 |       0 |       0 |        0 |
| [QuestDerivedClass](QuestDerivedClass) |      12 |       0 |       0 |        0 |
| [QuestEffectDefine](QuestEffectDefine) |      98 |       4 |       6 |        0 |
| [QuestEffectType](QuestEffectType) |       1 |       0 |       0 |        0 |
| [QuestEffect](QuestEffect) |      27 |       1 |       0 |        0 |
| [QuestEquipModel](QuestEquipModel) |       8 |       0 |       0 |        0 |
| [QuestLinkMarkerSet](QuestLinkMarkerSet) |      78 |      16 |       0 |        0 |
| [QuestLinkMarker](QuestLinkMarker) |      44 |       0 |       0 |        0 |
| [QuestRedoChapterUI](QuestRedoChapterUI) |       0 |       1 |       0 |        0 |
| [QuestRedoChapter](QuestRedoChapter) |       0 |       1 |       0 |        0 |
| [QuestRedoIncompChapter](QuestRedoIncompChapter) |       1 |       0 |       0 |        0 |
| [QuestRedoValidCustomTalk](QuestRedoValidCustomTalk) |       2 |       0 |       0 |        0 |
| [QuestRedo](QuestRedo) |       0 |       2 |       0 |        0 |
| [QuestSceneAbortCondition](QuestSceneAbortCondition) |       4 |       0 |       0 |        0 |
| [QuestSetDefine](QuestSetDefine) |      14 |      21 |       0 |        0 |
| [QuestSubCommand](QuestSubCommand) |     382 |       3 |       1 |        0 |
| [QuestSystemDefine](QuestSystemDefine) |       2 |       0 |       0 |        0 |
| [Quest](Quest) |       0 |       0 |    5326 |        0 |
| [QuickChat](QuickChat) |       0 |       1 |       0 |        0 |
| [RacingChocoboNameInfo](RacingChocoboNameInfo) |       0 |     638 |       0 |        0 |
| [ReactionEventObject](ReactionEventObject) |       1 |       0 |       0 |        0 |
| [RecipeLevelTable](RecipeLevelTable) |       0 |       6 |       0 |        0 |
| [RecipeLookup](RecipeLookup) |      65 |       0 |       0 |        0 |
| [RecipeNotebookList](RecipeNotebookList) |       0 |      14 |       0 |        0 |
| [Recipe](Recipe) |    1000 |      21 |       0 |        0 |
| [RecommendContents](RecommendContents) |       2 |       0 |       0 |        0 |
| [ReplaceAction](ReplaceAction) |      48 |     357 |       0 |        0 |
| [Resident](Resident) |    1256 |   33533 |       0 |        0 |
| [RetainerTaskNormal](RetainerTaskNormal) |       2 |       0 |       0 |        0 |
| [RetainerTaskParameter](RetainerTaskParameter) |      20 |       0 |       0 |        0 |
| [RetainerTask](RetainerTask) |       2 |       0 |       0 |        0 |
| [SE](SE) |      16 |       0 |       0 |        0 |
| [ScenarioTree](ScenarioTree) |      10 |       0 |       0 |        0 |
| [ScreenImage](ScreenImage) |     100 |      20 |       0 |        0 |
| [SecretRecipeBookGroup](SecretRecipeBookGroup) |      15 |       0 |       0 |        0 |
| [SequentialEventMultipleRange](SequentialEventMultipleRange) |      15 |       0 |       0 |        0 |
| [SequentialEvent](SequentialEvent) |      23 |       3 |       0 |        0 |
| [ShellFixedFromCommand](ShellFixedFromCommand) |      30 |      13 |       0 |        0 |
| [SpearfishingItem](SpearfishingItem) |       0 |      47 |       0 |        0 |
| [SpecialShop](SpecialShop) |      24 |      32 |       0 |        0 |
| [Spectator](Spectator) |       1 |       0 |       0 |        0 |
| [StatusHitEffect](StatusHitEffect) |       2 |       0 |       0 |        0 |
| [StatusLoopVFX](StatusLoopVFX) |      67 |       1 |       0 |        0 |
| [Status](Status) |     150 |      43 |       0 |        0 |
| [Story](Story) |      15 |      16 |       0 |        0 |
| [SubmarineExploration](SubmarineExploration) |       0 |       7 |       0 |        0 |
| [SubmarineRank](SubmarineRank) |       0 |       5 |       0 |        0 |
| [SwitchTalkVariation](SwitchTalkVariation) |     161 |       0 |       0 |        0 |
| [SwitchTalk](SwitchTalk) |      27 |       0 |       0 |        0 |
| [TerritoryIntendedUse](TerritoryIntendedUse) |       0 |       1 |       0 |        0 |
| [TerritoryTypeTelepo](TerritoryTypeTelepo) |      35 |       2 |       0 |        0 |
| [TerritoryTypeTransient](TerritoryTypeTransient) |      35 |       8 |       0 |        0 |
| [TerritoryType](TerritoryType) |      35 |      18 |       0 |        0 |
| [TextCommand](TextCommand) |       8 |       1 |       0 |        0 |
| [Title](Title) |      22 |       0 |       0 |        0 |
| [TofuBg](TofuBg) |       6 |       0 |       0 |        0 |
| [TofuEditParam](TofuEditParam) |       0 |       0 |       7 |        0 |
| [TofuObjectCategory](TofuObjectCategory) |       0 |       0 |       4 |        0 |
| [TofuObject](TofuObject) |       0 |       0 |      29 |        0 |
| [TofuPresetCategory](TofuPresetCategory) |       1 |       0 |       0 |        0 |
| [TofuPresetObject](TofuPresetObject) |      32 |       0 |       0 |        0 |
| [TofuPreset](TofuPreset) |       0 |       0 |      10 |        0 |
| [TopicSelect](TopicSelect) |       0 |       1 |       0 |        0 |
| [TraitTransient](TraitTransient) |       0 |      10 |       0 |        0 |
| [Trait](Trait) |       0 |     568 |       0 |        0 |
| [Transformation](Transformation) |      21 |       0 |       0 |        0 |
| [TreasureHuntRank](TreasureHuntRank) |       1 |       0 |       0 |        0 |
| [TreasureSpot](TreasureSpot) |       8 |       0 |       0 |        0 |
| [Treasure](Treasure) |      15 |      34 |       0 |        0 |
| [TripleTriadCardResident](TripleTriadCardResident) |      10 |       9 |       0 |        0 |
| [TripleTriadCard](TripleTriadCard) |      10 |       0 |       0 |        0 |
| [TripleTriadResident](TripleTriadResident) |       2 |       0 |       0 |        0 |
| [TripleTriad](TripleTriad) |       2 |       0 |       0 |        0 |
| [UDS_Event](UDS_Event) |      10 |       0 |       0 |        0 |
| [UDS_Object](UDS_Object) |       1 |       0 |       0 |        0 |
| [UDS_Property](UDS_Property) |      10 |       0 |       0 |        0 |
| [UDS_Stats](UDS_Stats) |      10 |       0 |       0 |        0 |
| [UIColorPickerTable](UIColorPickerTable) |      33 |       0 |       0 |        0 |
| [UIColor](UIColor) |      34 |       1 |       0 |        0 |
| [UIConst](UIConst) |       4 |       0 |       0 |        0 |
| [VFX](VFX) |     129 |       0 |       0 |        0 |
| [ValentionSweetsMaterial](ValentionSweetsMaterial) |      25 |       0 |       0 |        0 |
| [ValentionSweetsRecipe](ValentionSweetsRecipe) |      52 |       0 |       0 |        0 |
| [VaseFlower](VaseFlower) |      21 |       6 |       0 |        0 |
| [Vase](Vase) |       0 |       6 |       0 |        0 |
| [WKSAchievementDailyDefine](WKSAchievementDailyDefine) |       0 |       4 |       0 |        0 |
| [WKSAchievementRewardItem](WKSAchievementRewardItem) |       1 |       0 |       0 |        0 |
| [WKSAchievement](WKSAchievement) |      58 |      33 |       0 |        0 |
| [WKSCosmoToolClass](WKSCosmoToolClass) |       0 |       0 |       0 |        0 |
| [WKSCosmoToolCommonLevel](WKSCosmoToolCommonLevel) |       5 |       0 |       0 |        0 |
| [WKSCosmoToolDataAmount](WKSCosmoToolDataAmount) |       0 |       1 |       0 |        0 |
| [WKSCosmoToolName](WKSCosmoToolName) |      78 |       0 |       0 |        0 |
| [WKSCosmoToolPassiveBuff](WKSCosmoToolPassiveBuff) |       1 |       0 |       0 |        0 |
| [WKSDevGradeBGSet](WKSDevGradeBGSet) |     189 |     102 |       0 |        0 |
| [WKSDevGrade](WKSDevGrade) |      68 |      63 |       0 |        0 |
| [WKSEmergencyInfoText](WKSEmergencyInfoText) |      27 |       3 |       0 |        0 |
| [WKSEmergencyInfo](WKSEmergencyInfo) |       6 |       0 |       0 |        0 |
| [WKSEmergencyMissionGroup](WKSEmergencyMissionGroup) |      33 |       0 |       0 |        0 |
| [WKSEmergencyMission](WKSEmergencyMission) |      33 |       0 |       2 |        0 |
| [WKSEmergencyProblem](WKSEmergencyProblem) |      12 |       0 |       0 |        0 |
| [WKSFateControl](WKSFateControl) |      20 |       0 |       0 |        0 |
| [WKSFortunePatternUIPlace](WKSFortunePatternUIPlace) |      33 |       0 |       0 |        0 |
| [WKSFortuneSPPatternUIPlace](WKSFortuneSPPatternUIPlace) |       2 |       0 |       0 |        0 |
| [WKSFunction](WKSFunction) |       6 |       4 |       0 |        0 |
| [WKSItemInfo](WKSItemInfo) |     592 |       0 |       0 |        0 |
| [WKSMechaEventData](WKSMechaEventData) |       2 |       2 |       0 |        0 |
| [WKSMechaEventObjectGroup](WKSMechaEventObjectGroup) |      68 |      28 |       0 |        0 |
| [WKSMechaEventObject](WKSMechaEventObject) |      69 |      24 |       0 |        0 |
| [WKSMechaEventRewardUI](WKSMechaEventRewardUI) |       2 |       0 |       0 |        0 |
| [WKSMechaFieldSearcher](WKSMechaFieldSearcher) |      16 |       0 |       0 |        0 |
| [WKSMechaLivelyActorGroup](WKSMechaLivelyActorGroup) |       2 |       2 |       0 |        0 |
| [WKSMissionInfo](WKSMissionInfo) |      11 |       0 |       0 |        0 |
| [WKSMissionLotteryCond](WKSMissionLotteryCond) |      17 |       0 |       0 |        0 |
| [WKSMissionLotterySpecialCond](WKSMissionLotterySpecialCond) |       8 |       0 |       0 |        0 |
| [WKSMissionMapMarker](WKSMissionMapMarker) |      51 |       0 |       0 |        0 |
| [WKSMissionPromotionCondition](WKSMissionPromotionCondition) |       0 |      33 |       0 |        0 |
| [WKSMissionRecipe](WKSMissionRecipe) |     360 |       0 |       0 |        0 |
| [WKSMissionReward](WKSMissionReward) |     495 |       0 |       0 |        0 |
| [WKSMissionSupplyItem](WKSMissionSupplyItem) |     405 |       1 |       0 |        0 |
| [WKSMissionText](WKSMissionText) |      89 |      17 |       0 |        0 |
| [WKSMissionToDoEvalutionItem](WKSMissionToDoEvalutionItem) |     612 |       0 |       0 |        0 |
| [WKSMissionToDoEvalutionRefin](WKSMissionToDoEvalutionRefin) |     243 |       0 |       0 |        0 |
| [WKSMissionToDo](WKSMissionToDo) |     528 |      19 |       0 |        0 |
| [WKSMissionUnit](WKSMissionUnit) |     528 |     544 |       0 |        0 |
| [WKSNextPlanetGuidance](WKSNextPlanetGuidance) |       1 |       0 |       0 |        0 |
| [WKSParam](WKSParam) |       8 |       0 |       0 |        0 |
| [WKSPioneeringTrailString](WKSPioneeringTrailString) |      17 |       0 |       0 |        0 |
| [WKSPioneeringTrail](WKSPioneeringTrail) |      17 |       0 |       0 |        0 |
| [WKSPlanetSelect](WKSPlanetSelect) |       2 |       0 |       0 |        0 |
| [WKSPraiseHologram](WKSPraiseHologram) |       7 |       0 |       0 |        0 |
| [WKSPraiseUI](WKSPraiseUI) |       9 |       0 |       0 |        0 |
| [WKSSharedGroup](WKSSharedGroup) |     500 |       2 |       0 |        0 |
| [WKSTerritoryInfo](WKSTerritoryInfo) |       1 |       0 |       0 |        0 |
| [WKSText](WKSText) |       6 |       0 |       0 |        0 |
| [WKSZoneFloorCollision](WKSZoneFloorCollision) |       5 |       0 |       0 |        0 |
| [WarpCondition](WarpCondition) |       1 |       0 |       0 |        0 |
| [Warp](Warp) |      13 |       0 |       0 |        0 |
| [WeaponTimeline](WeaponTimeline) |       0 |      23 |       0 |        0 |
| [WeatherRate](WeatherRate) |       2 |       0 |       0 |        0 |
| [Weather](Weather) |       5 |       0 |       0 |        0 |
| [WebURL](WebURL) |       3 |       0 |       0 |        0 |
| [WeeklyBingoMultipleOrder](WeeklyBingoMultipleOrder) |     256 |       0 |       0 |        0 |
| [WeeklyBingoOrderData](WeeklyBingoOrderData) |       0 |     186 |       0 |        0 |
| [WeeklyBingoRewardData](WeeklyBingoRewardData) |       0 |      30 |       0 |        0 |
| [WeeklyBingoText](WeeklyBingoText) |       3 |       0 |       0 |        0 |
| [WorldDCGroupType](WorldDCGroupType) |       0 |       1 |       0 |        0 |
| [World](World) |      16 |       1 |       0 |        0 |
| [XBMPet](XBMPet) |       5 |       0 |       0 |        0 |
| [YardCatalogItemList](YardCatalogItemList) |      11 |       0 |       0 |        0 |
| [ZoneSharedGroup](ZoneSharedGroup) |      13 |       7 |       0 |        0 |
| [custom/000/CmnDefRetainerDesk_00009](custom/000/CmnDefRetainerDesk_00009) |       1 |     237 |       0 |        0 |
| [custom/003/HouFixMansionOfficer_00363](custom/003/HouFixMansionOfficer_00363) |       2 |       0 |       0 |        0 |
| [custom/003/RegSeaBeginnerTankGuide_00337](custom/003/RegSeaBeginnerTankGuide_00337) |       7 |       9 |       0 |        0 |
| [custom/003/RegSeaPvpSeasonRewardSecond_00358](custom/003/RegSeaPvpSeasonRewardSecond_00358) |       2 |      19 |       0 |        0 |
| [custom/007/FesNyr2023Omikuji_00776](custom/007/FesNyr2023Omikuji_00776) |       1 |       2 |       0 |        0 |
| [custom/008/CtsOpn70WanderingMinstrel_00897](custom/008/CtsOpn70WanderingMinstrel_00897) |      20 |       0 |       0 |        0 |
| [custom/008/RegUlw6GateofRemembrance_00887](custom/008/RegUlw6GateofRemembrance_00887) |       1 |       0 |       0 |        0 |
| [custom/009/CtsDdd4AencDaenTalk_00945](custom/009/CtsDdd4AencDaenTalk_00945) |     126 |       0 |       0 |        0 |
| [custom/009/CtsDdd4Entrance_00942](custom/009/CtsDdd4Entrance_00942) |      27 |       0 |       0 |        0 |
| [custom/009/CtsDdd4Gacha_00943](custom/009/CtsDdd4Gacha_00943) |      10 |       0 |       0 |        0 |
| [custom/009/CtsDdd4Reward_00944](custom/009/CtsDdd4Reward_00944) |      28 |       0 |       0 |        0 |
| [custom/009/CtsEtcEoVBossExplanation_00912](custom/009/CtsEtcEoVBossExplanation_00912) |      27 |      22 |       0 |        0 |
| [custom/009/CtsEtcEoVEquipCheck_00953](custom/009/CtsEtcEoVEquipCheck_00953) |      16 |       0 |       0 |        0 |
| [custom/009/CtsEtcKgrBarbecueCutScene_00957](custom/009/CtsEtcKgrBarbecueCutScene_00957) |       1 |       0 |       0 |        0 |
| [custom/009/CtsMkdWepTrade2_00952](custom/009/CtsMkdWepTrade2_00952) |       7 |       0 |       0 |        0 |
| [custom/009/CtsWks73GlassblowersBeacon_00955](custom/009/CtsWks73GlassblowersBeacon_00955) |      39 |       0 |       0 |        0 |
| [custom/009/CtsWksDelegationMember_00927](custom/009/CtsWksDelegationMember_00927) |       6 |       3 |       0 |        0 |
| [custom/009/CtsWksEmergencyTransport_00958](custom/009/CtsWksEmergencyTransport_00958) |      12 |       0 |       0 |        0 |
| [custom/009/CtsWksEntrance_00921](custom/009/CtsWksEntrance_00921) |       9 |       1 |       0 |        0 |
| [custom/009/CtsWksExit_00922](custom/009/CtsWksExit_00922) |       2 |       0 |       0 |        0 |
| [custom/009/CtsWksLot_00918](custom/009/CtsWksLot_00918) |       3 |      23 |       0 |        0 |
| [custom/009/CtsWksMechaEntryTicketCounter_00932](custom/009/CtsWksMechaEntryTicketCounter_00932) |       4 |       0 |       0 |        0 |
| [custom/009/CtsWksMumukko_00956](custom/009/CtsWksMumukko_00956) |      10 |       0 |       0 |        0 |
| [custom/009/CtsWksSdgAttendant_00920](custom/009/CtsWksSdgAttendant_00920) |       2 |      47 |       0 |        0 |
| [custom/009/FesAnv2025Guide_00926](custom/009/FesAnv2025Guide_00926) |       0 |       9 |       0 |        0 |
| [custom/009/FesHlwTransform_00946](custom/009/FesHlwTransform_00946) |       6 |       0 |       0 |        0 |
| [custom/009/FesHlx2025Guide_00947](custom/009/FesHlx2025Guide_00947) |      13 |       0 |       0 |        0 |
| [custom/009/FesHlx2025Witch_00948](custom/009/FesHlx2025Witch_00948) |      13 |       0 |       0 |        0 |
| [custom/009/FesNyx2027Guide_00939](custom/009/FesNyx2027Guide_00939) |      15 |       0 |       0 |        0 |
| [custom/009/FesPdy2026FateDisguise_00951](custom/009/FesPdy2026FateDisguise_00951) |       1 |       0 |       0 |        0 |
| [custom/009/FesVlt2026Entrance_00938](custom/009/FesVlt2026Entrance_00938) |      31 |       0 |       0 |        0 |
| [custom/009/FesVlt2026Guide_00937](custom/009/FesVlt2026Guide_00937) |      29 |       0 |       0 |        0 |
| [custom/009/FesXmx2025Guide_00940](custom/009/FesXmx2025Guide_00940) |      20 |       0 |       0 |        0 |
| [custom/009/FesXmx2025Omake_00941](custom/009/FesXmx2025Omake_00941) |      97 |       0 |       0 |        0 |
| [custom/009/RegSakPreservationLabo1st_00950](custom/009/RegSakPreservationLabo1st_00950) |       9 |       0 |       0 |        0 |
| [custom/009/RegSakPreservationLaboCommon_00949](custom/009/RegSakPreservationLaboCommon_00949) |      12 |       0 |       0 |        0 |
| [custom/009/RegYok6Zirgorteh_00954](custom/009/RegYok6Zirgorteh_00954) |      19 |       0 |       0 |        0 |
| [cut_scene/073/VoiceMan_07300](cut_scene/073/VoiceMan_07300) |       2 |     588 |       0 |        0 |
| [cut_scene/073/VoiceMan_07310](cut_scene/073/VoiceMan_07310) |       0 |       1 |       0 |        0 |
| [cut_scene/073/VoiceMan_07320](cut_scene/073/VoiceMan_07320) |       1 |       0 |       0 |        0 |
| [dungeon/000/DungeonDeepdungeon4_00000](dungeon/000/DungeonDeepdungeon4_00000) |       1 |       0 |       0 |        0 |
| [quest/006/TstPln904_00636](quest/006/TstPln904_00636) |      11 |       4 |       0 |        0 |
| [quest/006/TstPln906_00664](quest/006/TstPln906_00664) |       0 |       0 |      24 |        0 |
| [quest/006/TstPln907_00665](quest/006/TstPln907_00665) |       0 |       0 |      93 |        0 |
| [quest/007/TstPln919_00706](quest/007/TstPln919_00706) |       0 |       0 |      89 |        0 |
| [quest/008/TstPln924_00882](quest/008/TstPln924_00882) |       0 |       3 |       0 |        0 |
| [quest/010/TstPln927_01006](quest/010/TstPln927_01006) |      20 |       0 |       0 |        0 |
| [quest/012/BanSyl003_01254](quest/012/BanSyl003_01254) |       1 |      24 |       0 |        0 |
| [quest/012/BanSyl005_01256](quest/012/BanSyl005_01256) |       1 |      32 |       0 |        0 |
| [quest/012/BanSyl209_01275](quest/012/BanSyl209_01275) |       1 |       4 |       0 |        0 |
| [quest/012/BanSyl307_01283](quest/012/BanSyl307_01283) |       1 |       9 |       0 |        0 |
| [quest/013/BanKob110_01334](quest/013/BanKob110_01334) |       1 |       6 |       0 |        0 |
| [quest/013/BanKob210_01344](quest/013/BanKob210_01344) |       1 |       6 |       0 |        0 |
| [quest/013/BanKob310_01373](quest/013/BanKob310_01373) |       1 |       7 |       0 |        0 |
| [quest/029/JobSch700_02927](quest/029/JobSch700_02927) |       0 |       1 |       0 |        0 |
| [quest/031/BanNam403_03111](quest/031/BanNam403_03111) |       0 |       1 |       0 |        0 |
| [quest/033/LucKmc115_03336](quest/033/LucKmc115_03336) |       1 |      17 |       0 |        0 |
| [quest/042/AktKzf017_04272](quest/042/AktKzf017_04272) |       0 |       2 |       0 |        0 |
| [quest/044/AktKmd103_04411](quest/044/AktKmd103_04411) |       0 |       4 |       0 |        0 |
| [quest/049/KinGlz001_04967](quest/049/KinGlz001_04967) |       1 |       6 |       0 |        0 |
| [quest/049/KinGme103_04934](quest/049/KinGme103_04934) |       0 |       1 |       0 |        0 |
| [quest/051/KinGzh002_05175](quest/051/KinGzh002_05175) |       2 |       9 |       0 |        0 |
| [quest/051/KinGzh004_05177](quest/051/KinGzh004_05177) |       0 |       4 |       0 |        0 |
| [quest/051/KinGzh006_05179](quest/051/KinGzh006_05179) |       0 |       2 |       0 |        0 |
| [quest/052/BanMam120_05280](quest/052/BanMam120_05280) |       0 |       1 |       0 |        0 |
| [quest/052/FesAnx101_05297](quest/052/FesAnx101_05297) |       0 |     112 |       0 |        0 |
| [quest/052/FesAnx102_05298](quest/052/FesAnx102_05298) |       3 |     168 |       0 |        0 |
| [quest/052/FesXmx101_05231](quest/052/FesXmx101_05231) |     134 |      48 |       0 |        0 |
| [quest/052/FesXmx102_05232](quest/052/FesXmx102_05232) |       0 |      48 |       0 |        0 |
| [quest/052/KinGwk101_05253](quest/052/KinGwk101_05253) |       1 |       9 |       0 |        0 |
| [quest/053/BanYok001_05330](quest/053/BanYok001_05330) |     152 |       0 |       0 |        0 |
| [quest/053/BanYok002_05331](quest/053/BanYok002_05331) |     134 |       0 |       0 |        0 |
| [quest/053/BanYok003_05332](quest/053/BanYok003_05332) |     128 |       0 |       0 |        0 |
| [quest/053/BanYok004_05333](quest/053/BanYok004_05333) |     142 |       0 |       0 |        0 |
| [quest/053/BanYok005_05334](quest/053/BanYok005_05334) |     158 |       0 |       0 |        0 |
| [quest/053/BanYok006_05335](quest/053/BanYok006_05335) |      88 |       0 |       0 |        0 |
| [quest/053/BanYok101_05336](quest/053/BanYok101_05336) |      69 |       0 |       0 |        0 |
| [quest/053/BanYok102_05337](quest/053/BanYok102_05337) |      69 |       0 |       0 |        0 |
| [quest/053/BanYok103_05338](quest/053/BanYok103_05338) |      70 |       0 |       0 |        0 |
| [quest/053/BanYok104_05339](quest/053/BanYok104_05339) |      64 |       0 |       0 |        0 |
| [quest/053/BanYok105_05340](quest/053/BanYok105_05340) |      70 |       0 |       0 |        0 |
| [quest/053/BanYok106_05341](quest/053/BanYok106_05341) |      68 |       0 |       0 |        0 |
| [quest/053/BanYok107_05342](quest/053/BanYok107_05342) |      74 |       0 |       0 |        0 |
| [quest/053/BanYok108_05343](quest/053/BanYok108_05343) |      62 |       0 |       0 |        0 |
| [quest/053/BanYok109_05344](quest/053/BanYok109_05344) |      68 |       0 |       0 |        0 |
| [quest/053/BanYok110_05345](quest/053/BanYok110_05345) |      66 |       0 |       0 |        0 |
| [quest/053/BanYok111_05346](quest/053/BanYok111_05346) |      64 |       0 |       0 |        0 |
| [quest/053/BanYok112_05347](quest/053/BanYok112_05347) |      68 |       0 |       0 |        0 |
| [quest/053/BanYok113_05348](quest/053/BanYok113_05348) |      68 |       0 |       0 |        0 |
| [quest/053/BanYok114_05349](quest/053/BanYok114_05349) |      66 |       0 |       0 |        0 |
| [quest/053/BanYok115_05350](quest/053/BanYok115_05350) |      79 |       0 |       0 |        0 |
| [quest/053/BanYok116_05351](quest/053/BanYok116_05351) |      62 |       0 |       0 |        0 |
| [quest/053/BanYok117_05352](quest/053/BanYok117_05352) |      70 |       0 |       0 |        0 |
| [quest/053/BanYok118_05353](quest/053/BanYok118_05353) |      72 |       0 |       0 |        0 |
| [quest/053/BanYok119_05354](quest/053/BanYok119_05354) |      63 |       0 |       0 |        0 |
| [quest/053/BanYok120_05355](quest/053/BanYok120_05355) |      74 |       0 |       0 |        0 |
| [quest/053/BanYok121_05356](quest/053/BanYok121_05356) |      72 |       0 |       0 |        0 |
| [quest/053/BanYok122_05357](quest/053/BanYok122_05357) |      70 |       0 |       0 |        0 |
| [quest/053/BanYok123_05358](quest/053/BanYok123_05358) |      65 |       0 |       0 |        0 |
| [quest/053/BanYok124_05359](quest/053/BanYok124_05359) |      74 |       0 |       0 |        0 |
| [quest/053/BanYok125_05360](quest/053/BanYok125_05360) |      59 |       0 |       0 |        0 |
| [quest/053/BanYok126_05361](quest/053/BanYok126_05361) |      71 |       0 |       0 |        0 |
| [quest/053/BanYok127_05362](quest/053/BanYok127_05362) |      69 |       0 |       0 |        0 |
| [quest/053/BanYok128_05363](quest/053/BanYok128_05363) |      70 |       0 |       0 |        0 |
| [quest/053/ChrHdb931_05378](quest/053/ChrHdb931_05378) |     186 |       0 |       0 |        0 |
| [quest/053/ChrHdb932_05379](quest/053/ChrHdb932_05379) |     237 |       0 |       0 |        0 |
| [quest/053/FesHlx101_05375](quest/053/FesHlx101_05375) |     131 |       0 |       0 |        0 |
| [quest/053/FesHlx102_05376](quest/053/FesHlx102_05376) |     162 |       0 |       0 |        0 |
| [quest/053/FesNyx301_05377](quest/053/FesNyx301_05377) |     147 |       0 |       0 |        0 |
| [quest/053/FesVlx201_05325](quest/053/FesVlx201_05325) |      10 |       0 |       0 |        0 |
| [quest/053/KinGea201_05326](quest/053/KinGea201_05326) |     155 |       0 |       0 |        0 |
| [quest/053/KinGea202_05327](quest/053/KinGea202_05327) |     104 |       0 |       0 |        0 |
| [quest/053/KinGea203_05328](quest/053/KinGea203_05328) |      91 |       0 |       0 |        0 |
| [quest/053/KinGea204_05329](quest/053/KinGea204_05329) |     131 |       0 |       0 |        0 |
| [quest/053/KinGkw101_05380](quest/053/KinGkw101_05380) |     108 |       0 |       0 |        0 |
| [quest/053/KinGkw102_05381](quest/053/KinGkw102_05381) |      85 |       0 |       0 |        0 |
| [quest/053/KinGkw103_05382](quest/053/KinGkw103_05382) |      99 |       0 |       0 |        0 |
| [quest/053/KinGmi101_05364](quest/053/KinGmi101_05364) |     273 |       0 |       0 |        0 |
| [quest/053/KinGmi102_05365](quest/053/KinGmi102_05365) |     112 |       0 |       0 |        0 |
| [quest/053/KinGmi103_05366](quest/053/KinGmi103_05366) |      98 |       0 |       0 |        0 |
| [quest/053/KinGmi104_05367](quest/053/KinGmi104_05367) |     109 |       0 |       0 |        0 |
| [quest/053/KinGmi105_05368](quest/053/KinGmi105_05368) |     264 |       0 |       0 |        0 |
| [quest/053/KinGmi106_05369](quest/053/KinGmi106_05369) |     306 |       0 |       0 |        0 |
| [quest/053/KinGmi107_05370](quest/053/KinGmi107_05370) |     112 |       0 |       0 |        0 |
| [quest/053/KinGmi108_05371](quest/053/KinGmi108_05371) |     162 |       0 |       0 |        0 |
| [quest/053/KinGmi109_05372](quest/053/KinGmi109_05372) |     106 |       0 |       0 |        0 |
| [quest/053/KinGmi110_05373](quest/053/KinGmi110_05373) |     163 |       0 |       0 |        0 |
| [quest/053/KinGyx901_05374](quest/053/KinGyx901_05374) |     212 |       0 |       0 |        0 |
| [quest/053/SubGtn001_05383](quest/053/SubGtn001_05383) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn101_05384](quest/053/SubGtn101_05384) |     164 |       0 |       0 |        0 |
| [quest/053/SubGtn102_05385](quest/053/SubGtn102_05385) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn103_05386](quest/053/SubGtn103_05386) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn104_05387](quest/053/SubGtn104_05387) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn201_05388](quest/053/SubGtn201_05388) |     142 |       0 |       0 |        0 |
| [quest/053/SubGtn202_05389](quest/053/SubGtn202_05389) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn203_05390](quest/053/SubGtn203_05390) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn204_05391](quest/053/SubGtn204_05391) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn301_05392](quest/053/SubGtn301_05392) |     205 |       0 |       0 |        0 |
| [quest/053/SubGtn302_05393](quest/053/SubGtn302_05393) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn303_05394](quest/053/SubGtn303_05394) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn304_05395](quest/053/SubGtn304_05395) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn305_05396](quest/053/SubGtn305_05396) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn306_05397](quest/053/SubGtn306_05397) |      48 |       0 |       0 |        0 |
| [quest/053/SubGtn401_05398](quest/053/SubGtn401_05398) |     173 |       0 |       0 |        0 |
| [quest/053/SubGtn402_05399](quest/053/SubGtn402_05399) |     171 |       0 |       0 |        0 |
| [quest/054/KinGdd101_05405](quest/054/KinGdd101_05405) |     183 |       0 |       0 |        0 |
| [quest/054/KinGdd102_05406](quest/054/KinGdd102_05406) |     107 |       0 |       0 |        0 |
| [quest/054/KinGdd103_05407](quest/054/KinGdd103_05407) |     105 |       0 |       0 |        0 |
| [quest/054/KinGdd104_05408](quest/054/KinGdd104_05408) |      76 |       0 |       0 |        0 |
| [quest/054/KinGdd201_05415](quest/054/KinGdd201_05415) |      48 |       0 |       0 |        0 |
| [quest/054/KinGdd202_05416](quest/054/KinGdd202_05416) |      48 |       0 |       0 |        0 |
| [quest/054/KinGwk201_05409](quest/054/KinGwk201_05409) |      99 |       0 |       0 |        0 |
| [quest/054/KinGwk202_05410](quest/054/KinGwk202_05410) |     169 |       0 |       0 |        0 |
| [quest/054/KinGwz201_05411](quest/054/KinGwz201_05411) |     119 |       0 |       0 |        0 |
| [quest/054/KinGwz202_05412](quest/054/KinGwz202_05412) |      80 |       0 |       0 |        0 |
| [quest/054/KinGwz203_05413](quest/054/KinGwz203_05413) |      81 |       0 |       0 |        0 |
| [quest/054/KinGwz204_05414](quest/054/KinGwz204_05414) |     175 |       0 |       0 |        0 |
| [quest/054/SubGtn403_05400](quest/054/SubGtn403_05400) |      48 |       0 |       0 |        0 |
| [quest/054/SubGtn501_05401](quest/054/SubGtn501_05401) |      48 |       0 |       0 |        0 |
| [quest/054/SubGtn502_05402](quest/054/SubGtn502_05402) |      48 |       0 |       0 |        0 |
| [quest/054/SubGtn503_05403](quest/054/SubGtn503_05403) |      48 |       0 |       0 |        0 |
| [quest/054/SubGtn504_05404](quest/054/SubGtn504_05404) |      48 |       0 |       0 |        0 |
| [transport/AetheryteBestwaysBurrow](transport/AetheryteBestwaysBurrow) |       3 |       0 |       0 |        0 |